--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -575,6 +575,100 @@ convenience init(<#parameters#>) {
 
 ### 클래스 타입에 대한 초기화 위임 (Initializer Delegation for Class Types)
 
+지정 초기화 구문과 편의 초기화 구문 사이의 관계를 단순화하기 위해 Swift 는 초기화 사이의 위임 호출에 대해 다음 3가지 규칙을 적용합니다.
+
+**규칙 1**
+
+- 지정 초기화 구문은 직계 상위 클래스의 지정 초기화 구문을 호출해야 합니다.
+
+**규칙 2**
+
+- 편의 초기화 구문은 동일한 클래스에서 다른 초기화를 호출해야 합니다.
+
+**규칙 3**
+
+- 편의 초기화 구문은 궁극적으로 지정 초기화 구문을 호출해야 합니다.
+
+#
+
+이것을 기억하는 간단한 방법은 다음과 같습니다.
+
+- 지정 초기화 구문은 항상 위를 위임해야 합니다.
+
+- 편의 초기화 구문은 항상 옆에 걸쳐 위임해야 합니다.
+
+#
+
+이러한 규칙은 아래의 그림에 설명되어 있습니다.
+
+<img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/93ec426d-33a0-4310-9434-776f1fa63b90">
+
+여기서 상위 클래스에는 하나의 지정 초기화와 2개의 편의 초기화가 있습니다.
+
+하나의 편의 초기화는 또 다른 편의 초기화를 호출하고 이는 차례로 단일 지정 초기화를 호출합니다.
+
+이는 위츼 규칙2 와 규칙3 을 만족합니다.
+
+상위 클래스 자체에는 추가 상위 클래스가 없으므로 규칙1 이 적용되지 않습니다.
+
+#
+
+이 그림의 하위 클래스에는 2개의 지정 초기화와 하나의 편의 초기화가 있습니다.
+
+편의 초기화는 동일한 클래스의 다른 초기화만 호출할 수 있으므로 2개의 지정 초기화 중 하나를 호출해야 합니다.
+
+이는 위의 규칙2 와 3을 만족합니다.
+
+위의 규칙1 을 충족하려면 2개의 지정 초기화 모두 상위 클래스에서 단일 지정 초기화를 호출해야 합니다.
+
+> Note    
+> 이러한 규칙은 클래스의 사용자가 각 클래스의 인스턴스를 생성하는 방법에 영향을 주지 않습니다.
+> 위 다이어그램의 모든 초기화 구문은 자신이 속한 클래스의 완전히 초기화된 인스턴스를 만드는데 사용할 수 있습니다.
+> 규칙은 클래스의 초기화 구현을 작성하는 방법에만 영향을 미칩니다.
+
+#
+
+아래 그림은 4개의 클래스에 대한 더 복잡한 클래스 계층 구조를 보여줍니다.
+
+이 계층 구조의 지정 초기화 구문이 클래스 초기화를 위한 "funnel" 지점 역할을 하여 체인에 있는 클래스 간의 상호 관계를 단순화하는 방법을 보여줍니다.
+
+<img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/fa11e073-af72-44a3-a7a7-df6ac1f1b1fc">
+
+<br>
+
+### 2단계 초기화 (Two-Phase Initialization)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
