--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -638,8 +638,126 @@ convenience init(<#parameters#>) {
 
 ### 2단계 초기화 (Two-Phase Initialization)
 
+Swift 의 클래스 초기화는 2단계 프로세스 입니다.
 
+첫번째 단계에서는 각 저장 프로퍼티가 해당 프로퍼티를 도입한 클래스에 의해 초기값이 할당됩니다.
 
+모든 저장 프로퍼티의 초기 상태가 결정되면 두번째 단계가 시작되고 각 클래스에는 새로운 인스턴스를 사용할 준비가 된 것으로 간주되기 전에 저장 프로퍼티를 추가로 사용자 정의할 수 있는 기회가 제공됩니다.
+
+#
+
+2단계 초기화 프로세스를 사용하면 초기화가 안전하게 이루어지며 클래스 계층 구조의 각 클래스에 완전한 유연성이 제공됩니다.
+
+2단계 초기화는 프로퍼티 값이 초기화되기 전에 접근되는 것을 방지하고 프로퍼티 값이 예기치 않게 다른 초기화에 의해 다른 값으로 설정되는 것을 방지합니다.
+
+> Note    
+> Swift 의 2단계 초기화 프로세스는 Objective-C 의 초기화와 유사합니다.
+> 주요 차이점은 1단계에서 Objective-C 는 모든 프로퍼티에 0 또는 null 값 (`0` 또는 `nil`) 을 할당한다는 것입니다.
+> Swift 의 초기화 흐름은 사용자 정의 초기값을 설정할 수 있고 `0` 또는 `nil` 이 유효한 기본값이 아닌 타입에 대처할 수 있다는 점에서 더 유연합니다.
+
+#
+
+Swift 의 컴파일러는 2단계 초기화가 에러없이 완료되었는지 확인하기 위해 4가지 유용한 안전 검사를 수행합니다.
+
+**안전 점검 1**
+
+- 지정 초기화는 클래스에 의해 도입된 모든 프로퍼티가 상위 클래스 초기화에 위임되기 전에 초기화가 되도록 보장해야 합니다.
+
+위에서 언급했듯이 객체의 메모리는 모든 저장 프로퍼티의 초기 상태가 알려진 후에만 완전히 초기화된 것으로 간주됩니다.
+
+이 규칙을 충족하려면 지정 초기화는 체인을 전달하기 전에 모든 자체 프로퍼티가 초기화 되었는지 확인해야 합니다.
+
+**안전 점검 2**
+
+- 지정 초기화는 상속된 프로퍼티에 값을 할당하기 전에 상위 클래스 초기화에 위임해야 합니다. 그렇지 않으면 지정 초기화가 할당한 새 값은 자체 초기화의 일부로 상위 클래스에 의해 덮어 쓰여집니다.
+
+**안전 점검 3**
+
+- 편의 초기화는 모든 프로퍼티 (동일한 클래스에 의해 정의된 프로퍼티 포함) 에 값을 할당하기 전에 다른 초기화에 위임해야 합니다. 그렇지 않으면 편의 초기화가 할당한 새 값은 자체 클래스의 지정 초기화로 덮어 쓰여집니다. 
+
+**안전 점검 4**
+
+- 초기화는 첫번째 초기화 단계가 완료될 때까지 인스턴스 메서드를 호출하거나 인스턴스 프로퍼티값을 읽거나 `self` 값을 참조할 수 없습니다.
+
+#
+
+클래스 인스턴스는 첫번째 단계가 끝날 때까지 완전히 유효하지 않습니다.
+
+첫번째 단계가 끝날 때 클래스 인스턴스가 유요한 것으로 판단된 후에만 프로퍼티에만 접근할 수 있고 메서드만 호출할 수 있습니다.
+
+#
+
+위의 4가지 안전 점검을 기반으로 2단계 초기화가 수행되는 방식은 아래와 같습니다.
+
+**1 단계**
+
+- 지정 또는 편의 초기화가 클래스에서 호출됩니다.
+
+- 해당 클래스의 새로운 인스턴스에 대한 메모리가 할당됩니다. 메모리가 아직 초기화 되지 않았습니다.
+
+- 해당 클래스의 지정 초기화는 클래스에 의해 도입된 모든 저장 프로퍼티가 값을 가지고 있는지 확인합니다. 이제 이러한 저장 프로퍼티에 대한 메모리가 초기화됩니다.
+
+- 지정 초기화는 자신의 저장 프로퍼티에 대해 동일한 작업을 수행하기 위해 상위 클래스 초기화에 전달됩니다.
+
+- 이것은 체인의 최상위에 도달할 때까지 클래스 상속 체인을 계속 진행합니다.
+
+- 최상위 체인에 도달하고 체인의 마지막 클래스가 모든 저장 프로퍼티에 값이 있음을 확인하면 인스턴스의 메모리가 완전히 초기화된 것으로 간주되어 1단계가 완료됩니다.
+
+#
+
+**2 단계**
+
+- 체인의 최상위에서 아래로 내려가면 체인의 각 지정 초기화에는 인스턴스를 추가로 사용자 정의할 수 있는 옵션이 있습니다. 초기화는 이제 해당 `self` 프로퍼티에 접근하여 수정하고 인스턴스 메서드를 호출하는 등의 작업을 수행할 수 있습니다.
+
+- 마지막으로 체인의 모든 편의 초기화에는 인스턴스를 사용자 정의하고 `self` 로 작업할 수 있는 옵션이 있습니다.
+
+#
+
+다음은 1단계에서 가상의 하위 클래스 및 상위 클래스에 대한 초기화 호출을 찾는 방법을 나타냅니다.
+
+<img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/efd3155b-462b-44b1-95fc-46f305a81daf">
+
+이 예제에서 초기화는 하위 클래스의 편의 초기화 호출로 시작됩니다.
+
+이 편의 초기화는 아직 어떤 프로퍼티도 수정할 수 없습니다.
+
+동일한 클래스의 지정 초기화에 위임합니다.
+
+#
+
+지정 초기화는 안전 점검1 에 따라 하위 클래스의 모든 프로퍼티에 값이 있는지 확인합니다.
+
+그런 다음 상위 클래스에서 지정 초기화를 호출하여 체인의 초기화를 계속합니다.
+
+#
+
+상위 클래스의 지정 초기화는 모든 상위 클래스 프로퍼티에 값이 있는지 확인합니다.
+
+초기화 할 추가 상위 클래스가 없으므로 추가 위임이 필요하지 않습니다.
+
+#
+
+상위 클래스의 모든 프로퍼티가 초기값을 갖게 되면 해당 메모리는 완전히 초기화된 것으로 간주되어 1단계가 완료됩니다.
+
+#
+
+다음은 2단계에서 동일한 초기화 호출을 찾는 방법을 나타냅니다.
+
+<img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/f0af4079-c4f2-4b22-a7b4-946d7d9ee10e">
+
+이제 상위 클래스의 지정 초기화는 인스턴스를 추가로 사용자 정의할 수 있는 기회 (필수는 아님) 를 갖습니다.
+
+#
+
+상위 클래스의 지정 초기화가 완료되면 하위 클래스의 저정 초기화는 추가적인 사용자 정의를 수행할 수 있습니다.
+
+#
+
+마지막으로 하위 클래스의 지정 초기화가 완료되면 원래 호출되었던 편의 초기화가 추가 사용자 정의를 수행할 수 있습니다.
+
+<br>
+
+### 초기화 상속 및 재정의 (Initializer Inheritance and Overriding)
 
 
 
