--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -811,12 +811,98 @@ class Vehicle {
 }
 ~~~
 
+#
 
+`Vehicle` 클래스는 저장 프로퍼티에만 기본값을 제공하며 사용자 지정 초기화 자체는 제공하지 않습니다.
 
+결과적으로 [기본 초기화 (Default Initializers)]() 에 설명된 대로 자동으로 기본 초기화를 받습니다.
 
+기본 초기화는 사용 가능한 경우 항상 클래스에 대해 지정 초기화이며 기본값이 `0` 인 `numberOfWheels` 를 가진 새로운 `Vehicle` 인스턴스를 생성하기 위해 사용할 수 있습니다.
 
+~~~ swift
+let vehicle = Vehicle()
+print("Vehicle: \(vehicle.description)")
+// Vehicle: 0 wheel(s)
+~~~
 
+#
 
+다음 예제는 `Bicycle` 이라는 `Vehicle` 의 하위 클래스를 정의합니다.
+
+~~~ swift
+class Bicycle: Vehicle {
+    override init() {
+        super.init()
+        numberOfWheels = 2
+    }
+}
+~~~
+
+`Bicycle` 하위 클래스는 사용자 지정 지정 초기화인 `init()` 을 정의합니다.
+
+이 지정 초기화 구문은 `Bicycle` 의 상위 클래스 지정 초기화 구문과 일치하므로 초기화 구문의 `Bicycle` 버전은 `override` 수정자가 표시됩니다.
+
+#
+
+`Bicycle` 의 `init()` 초기화 구문은 `Bicycle` 클래스의 상위 클래스인 `Vehicle` 에 대한 기본 초기화 구문을 호출하는 `super.init()` 을 호출하는 것으로 시작합니다.
+
+이렇게 하면 상속된 `Vehicle` 프로퍼티가 이전에 초기화되어 `Bicycle` 이 `numberOfWheels` 프로퍼티를 수정할 기회를 갖게 됩니다.
+
+`super.init()` 을 호출한 후에 `numberOfWheels` 의 기존 값이 새로운 값 `2` 로 대체됩니다.
+
+#
+
+`Bicycle` 의 인스턴스를 생성하는 경우 상속된 `description` 계산 프로퍼티를 호출하여 해당 `numberOfWheels` 프로퍼티가 어떻게 업데이트 되었는지 확인할 수 있습니다.
+
+~~~ swift
+let bicycle = Bicycle()
+print("Bicycle: \(bicycle.description)")
+// Bicycle: 2 wheel(s)
+~~~
+
+#
+
+하위 클래스 초기화 구문이 초기화 프로세스의 2단계에서 사용자 정의를 수행하지 않고 상위 클래스가 동기적이며 인수가 없는 지정 초기화 구문을 가지고 있는 경우 하위 클래스의 모든 저장 프로퍼티에 값을 할당한 후 `super.init()` 호출을 생략할 수 있습니다.
+
+상위 클래스의 초기화 구문이 비동기적이라면 명시적으로 `await super.init()` 을 작성해야 합니다.
+
+#
+
+아래 예제는 `Hoverboard` 라는 `Vehicle` 의 또 다른 하위 클래스를 정의합니다.
+
+초기화 구문에서 `Hoverboard` 클래스는 `color` 프로퍼티만 설정합니다.
+
+이 초기화 구문은 `super.init()` 을 명시적으로 호출하는 대신 상위 클래스의 초기화 구문을 암시적으로 호출함으로써 프로세스를 완료합니다.
+
+~~~ swift
+class Hoverboard: Vehicle {
+    var color: String
+    init(color: String) {
+        self.color = color
+        // super.init() implicitly called here
+    }
+    override var description: String {
+        return "\(super.description) in a beautiful \(color)"
+    }
+}
+~~~
+
+#
+
+`Hoverboard` 의 인스턴스는 `Vehicle` 초기화 구문에 의해 제공된 바퀴의 기본 갯수를 사용합니다.
+
+~~~ swift
+let hoverboard = Hoverboard(color: "silver")
+print("Hoverboard: \(hoverboard.description)")
+// Hoverboard: 0 wheel(s) in a beautiful silver
+~~~
+
+> Note    
+> 하위 클래스는 초기화 중에 상속된 변수 프로퍼티를 수정할 수 있지만 상속된 상수 프로퍼티는 수정할 수 없습니다.
+
+<br>
+
+### 자동 초기화 상속 (Automatic Initializer Inheritance)
 
 
 
