--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -904,6 +904,32 @@ print("Hoverboard: \(hoverboard.description)")
 
 ### 자동 초기화 상속 (Automatic Initializer Inheritance)
 
+위에서 언급한 것처럼 하위 클래스는 기본적으로 상위 클래스 초기화를 상속하지 않습니다.
+
+그러나 특정 조건이 충족되면 상위 클래스 초기화가 자동으로 상속됩니다.
+
+실제로 이것은 대부분의 경우에 초기화 재정의를 작성할 필요가 없으며 안전하다면 상위 클래스 초기화를 최소한의 노력으로 상속할 수 있습니다.
+
+#
+
+하위 클래스에 도입하는 모든 새로운 프로퍼티에 기본값을 제공하면 아래의 2가지 규칙이 적용됩니다.
+
+**규칙 1**
+
+- 하위 클래스가 지정 초기화를 정의하지 않으면 상위 클래스의 모든 지정 초기화를 자동으로 상속받습니다.
+
+**규칙 2**
+
+- 하위 클래스가 규칙 1에 따라 상속하거나 정의의 일부분으로 사용자 정의 구현을 제공하여 모든 상위 클래스 지정 초기화의 구현을 제공하는 경우 자동으로 모든 상위 클래스의 편의 초기화를 상속합니다.
+
+이러한 규칙은 하위 클래스가 편의 초기화를 추가하는 경우에도 적용됩니다.
+
+> Note    
+> 하위 클래스는 규칙 2를 충족하는 일부분으로 상위 클래스 지정 초기화를 하위 클래스 편의 초기화로 구현할 수 있습니다.
+
+<br>
+
+### 지정 초기화 및 편의 초기화 동작 (Designated and Convenience Initializers in Action)
 
 
 
