--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -931,12 +931,86 @@ print("Hoverboard: \(hoverboard.description)")
 
 ### 지정 초기화 및 편의 초기화 동작 (Designated and Convenience Initializers in Action)
 
+다음 예제는 지정 초기화, 편의 초기화 그리고 자동 초기화 상속이 실행되는 동작을 보여줍니다.
 
+이 예제는 `Food`, `RecipeIngredient` 그리고 `ShoppingListItem` 이라는 3개의 클래스 계층 구조를 정의하고 해당 초기화가 상호 작용하는 방식을 보여줍니다.
 
+#
 
+계층 구조의 기본 클래스는 식품 이름을 캡슐화하는 간단한 클래스인 `Food` 라고 합니다.
 
+`Food` 클래스는 `name` 이라는 단일 `String` 프로퍼티를 도입하고 `Food` 인스턴스 생성을 위한 2개의 초기화를 제공합니다.
 
+~~~ swift
+class Food {
+    var name: String
+    init(name: String) {
+        self.name = name
+    }
+    convenience init() {
+        self.init(name: "[Unnamed]")
+    }
+}
+~~~
 
+#
+
+아래 그림은 `Food` 클래스의 초기화 체인을 보여줍니다.
+
+<img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/8f35a96b-1fb2-423f-a297-01557ea96975">
+
+클래스는 기본 멤버별 초기화가 없으므로 `Food` 클래스는 `name` 이라는 단일 인수를 가지는 지정 초기화를 제공합니다.
+
+이 초기화는 특정 이름을 가진 새로운 `Food` 인스턴스를 생성하는데 사용될 수 있습니다.
+
+~~~ swift
+let namedMeat = Food(name: "Bacon")
+// namedMeat's name is "Bacon"
+~~~
+
+#
+
+`Food` 클래스의 `init(name: String)` 초기화는 새로운 `Food` 인스턴스의 모든 저장 프로퍼티가 완전히 초기화되도록 보장하기 때문에 지정 초기화로 제공됩니다.
+
+`Food` 클래스는 상위 클래스가 없으므로 `init(name: String)` 초기화는 초기화를 완료하기 위해 `super.init()` 을 호출할 필요가 없습니다.
+
+#
+
+`Food` 클래스는 인수가 없는 `init()` 편의 초기화도 제공합니다.
+
+`init()` 초기화는 `[Unnamed]` 의 `name` 값으로 `Food` 클래스의 `init(name: String)` 에 위임하여 새로운 음식에 대한 기본 이름을 제공합니다.
+
+~~~ swift
+let mysteryMeat = Food()
+// mysteryMeat's name is "[Unnamed]"
+~~~
+
+#
+
+계층 구조의 두번째 클래스는 `RecipeIngredient` 라는 `Food` 의 하위 클래스 입니다.
+
+`RecipeIngredient` 클래스는 요리 레시피의 재료를 모델링합니다.
+
+`quantity` (`Food` 에서 상속 받은 `name` 프로퍼티 외에도) 라는 `Int` 프로퍼티를 도입하고 `RecipeIngredient` 인스턴스 생성을 위한 2개의 초기화를 정의합니다.
+
+~~~ swift
+class RecipeIngredient: Food {
+    var quantity: Int
+    init(name: String, quantity: Int) {
+        self.quantity = quantity
+        super.init(name: name)
+    }
+    override convenience init(name: String) {
+        self.init(name: name, quantity: 1)
+    }
+}
+~~~
+
+#
+
+아래 그림은 `RecipeIngredient` 클래스의 초기화 체인을 보여줍니다.
+
+<img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/3cc5ba80-2e57-4e77-8ab8-1da27a598bf4">
 
 
 
