--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1012,10 +1012,124 @@ class RecipeIngredient: Food {
 
 <img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/3cc5ba80-2e57-4e77-8ab8-1da27a598bf4">
 
+`RecipeIngredient` 클래스는 새로운 `RecipeIngredient` 인스턴스의 모든 프로퍼티를 채우는데 사용할 수 있는 `init(name: String, quantity: String)` 단일 지정 초기화를 가지고 있습니다.
 
+이 초기화는 `RecipeIngredient` 에 도입된 새로운 프로퍼티인 `quantity` 프로퍼티에 전달된 `quantity` 인수를 할당하는 것으로 시작합니다.
 
+그런 다음 `Food` 클래스의 `init(name: String)` 초기화에 위임합니다.
 
+이 과정은 위에서 설명한 [2단계 초기화 (Two-Phase Initialization)]() 의 안전 점검 1 을 만족합니다.
 
+#
+
+`RecipeIngredient` 는 이름으로만 `RecipeIngredient` 인스턴스를 생성하는데 사용되는 `init(name: String)` 편의 초기화를 정의합니다.
+
+이 편의 초기화는 명시적인 수량 없이 생성되는 모든 `RecipeIngredient` 인스턴스에 대해 `1` 의 수량으로 가정합니다.
+
+이러한 편의 초기화 정의는 `RecipeIngredient` 인스턴스를 더 빠르고 편리하게 생성하도록 하고 여러개의 단일 수량 `RecipeIngredient` 인스턴스를 생성할 때 코드 중복을 방지합니다.
+
+이 편의 초기화는 단순히 `quantity` 값 `1` 을 전달하여 클래스의 지정 초기화에 위임합니다.
+
+#
+
+`RecipeIngredient` 에서 제공하는 `init(name: String)` 편의 초기화는 `Food` 의 지정 초기화 `init(name: String)` 과 동일한 파라미터를 사용합니다.
+
+이 편의 초기화는 상위 클래스의 지정 초기화를 재정의하기 때문에 [초기화 상속 및 재정의 (Initializer Inheritance and Overriding)]() 에서 설명한 대로 `override` 수정자를 붙여줘야 합니다.
+
+#
+
+`RecipeIngredient` 는 편의 초기화로 `init(name: String)` 초기화를 제공 하더라도 `RecipeIngredient` 는 상위 클래스의 모든 지정 초기화의 구현을 제공합니다.
+
+따라서 `RecipeIngredient` 는 상위 클래스의 모든 편의 초기화도 자동으로 상속합니다.
+
+#
+
+이 예제에서 `RecipeIngredient` 의 상위 클래스에는 `init()` 이라는 단일 편의 초기화가 있습니다.
+
+따라서 이 초기화는 `RecipeIngredient` 에 상속됩니다.
+
+상속된 `init()` 버전의 기능은 `Food` 버전이 아닌 `RecipeIngredient` 버전의 `init(name: String)` 에 위임된다는 점을 제외하면 `Food` 버전과 정확히 동일한 방식으로 작동합니다.
+
+#
+
+이 3가지 초기화 모두 새로운 `RecipeIngredient` 인스턴스를 생성하는데 사용할 수 있습니다.
+
+~~~ swift
+let oneMysteryItem = RecipeIngredient()
+let oneBacon = RecipeIngredient(name: "Bacon")
+let sixEggs = RecipeIngredient(name: "Eggs", quantity: 6)
+~~~
+
+#
+
+계층 구조의 세번째이자 마지막 클래스는 `RecipeIngredient` 의 하위 클래스 `ShoppingListItem` 입니다.
+
+`ShoppingListItem` 클래스는 쇼핑 리스트에 표시되는 레시피 재료를 모델링 합니다.
+
+#
+
+쇼핑 리스트의 모든 항목은 "구매하지 않음" 으로 시작됩니다.
+
+이것을 표현하기 위해 `ShoppingListItem` 은 기본값이 `false` 인 `purchased` 부울 프로퍼티를 도입합니다.
+
+또한 `ShoppingListItem` 은 `ShoppingListItem` 인스턴스의 텍스트 설명을 제공하는 계산 프로퍼티 `description` 을 추가합니다.
+
+~~~ swift
+class ShoppingListItem: RecipeIngredient {
+    var purchased = false
+    var description: String {
+        var output = "\(quantity) x \(name)"
+        output += purchased ? " ✔" : " ✘"
+        return output
+    }
+}
+~~~
+
+> Note    
+> `ShoppingListItem` 의 `purchased` 에 대한 초기값을 제공하기 위해 초기화를 정의하지 않습니다.
+> 왜냐하면 여기서 모델링된 대로 쇼핑 리스트 항목은 항상 구매되지 않은 상태에서 시작되기 때문입니다.
+
+#
+
+도입한 모든 프로퍼티에 대한 기본값을 제공하고 초기화 자체를 정의하지 않기 때문에 `ShoppingListItem` 은 자동으로 상위 클래스에서 지정 초기화와 편의 초기화 모두 상속합니다.
+
+#
+
+아래 그림은 세 클래스 모두에 대한 전체 초기화 체인을 보여줍니다.
+
+<img width="500" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/1d637a4b-0a44-4ad8-8a68-4e1487421d61">
+
+#
+
+상속된 초기화 3개를 모두 사용하여 새로운 `ShoppingListItem` 인스턴스를 생성할 수 있습니다.
+
+~~~ swift
+var breakfastList = [
+    ShoppingListItem(),
+    ShoppingListItem(name: "Bacon"),
+    ShoppingListItem(name: "Eggs", quantity: 6),
+]
+breakfastList[0].name = "Orange juice"
+breakfastList[0].purchased = true
+for item in breakfastList {
+    print(item.description)
+}
+// 1 x Orange juice ✔
+// 1 x Bacon ✘
+// 6 x Eggs ✘
+~~~
+
+여기서 3개의 새로운 `ShoppingListItem` 인스턴스를 포함하는 새로운 배열 `breakfastList` 가 생성됩니다.
+
+배열의 타입은 `[ShoppingListItem]` 으로 추론됩니다.
+
+배열이 생성된 후에 배열의 첫번째 `ShoppingListItem` 에 이름이 `"[Unnamed]"` 에서 `"Orange juice"` 로 변경되고 구매된 것으로 표시됩니다.
+
+배열의 각 항목에 대한 설명을 출력하면 해당 항목의 기본 상태가 예상대로 설정되었음을 알 수 있습니다.
+
+<br>
+
+## 실패 가능한 초기화 (Failable Initializers)
 
 
 
