--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1131,6 +1131,123 @@ for item in breakfastList {
 
 ## 실패 가능한 초기화 (Failable Initializers)
 
+초기화가 실패할 수 있는 클래스, 구조체 또는 열거형을 정의하는 것이 유용한 경우가 있습니다.
+
+이 실패는 잘못된 초기화 파라미터 값, 필수 외부 리소스 부재 또는 초기화 성공을 방해하는 기타 조건으로 인해 발생할 수 있습니다.
+
+#
+
+실패할 수 있는 초기화 조건에 대처하려면 클래스, 구조체 또는 열거형 정의의 일부로 실패할 수 있는 하나 이상의 초기화를 정의하세요.
+
+`init` 키워드 뒤에 물음표를 배치하여 실패할 수 있는 초기화를 작성합니다(`init?`).
+
+> Note    
+> 동일한 파라미터 타입과 이름을 사용하여 실패 가능한 초기화와 실패 불가능한 초기화를 정의할 수 없습니다.
+
+#
+
+실패 가능한 초기화는 초기화하는 타입의 옵셔널값을 생성합니다.
+
+초기화 실패가 트리거될 수 있는 지점을 나타내기 위해 실패할 수 있는 초기화 내에 `return nil` 을 작성합니다.
+
+> Note    
+> 엄밀히 말하면 초기화는 값을 반환하지 않습니다.
+> 오히려 그들의 역할은 초기화가 끝날 때까지 `self` 가 완전하고 정확하게 초기화 되도록 하는 것입니다.
+> 초기화 실패를 트리거 하기 위해 `return nil` 을 작성했지만 초기화 성공을 나타내기 위해 `return` 키워드를 사용하지 않습니다.
+
+#
+
+예를 들어 숫자 타입 변환을 위해 실패 가능한 초기화 구현됩니다.
+
+숫자 타입 간의 변환이 값을 정확하게 유지하도록 하려면 `init(exactly:)` 초기화를 사용합니다.
+
+타입 변환이 값을 유지할 수 없으면 초기화는 실패합니다.
+
+~~~ swift
+let wholeNumber: Double = 12345.0
+let pi = 3.14159
+
+
+if let valueMaintained = Int(exactly: wholeNumber) {
+    print("\(wholeNumber) conversion to Int maintains value of \(valueMaintained)")
+}
+// Prints "12345.0 conversion to Int maintains value of 12345"
+
+
+let valueChanged = Int(exactly: pi)
+// valueChanged is of type Int?, not Int
+
+
+if valueChanged == nil {
+    print("\(pi) conversion to Int doesn't maintain value")
+}
+// Prints "3.14159 conversion to Int doesn't maintain value"
+~~~
+
+#
+
+아래 예제는 `species` 라는 `String` 상수 프로퍼티를 가진 `Animal` 구조체를 정의합니다.
+
+`Animal` 구조체는 `species` 라는 단일 파라미터를 사용하여 실패 가능한 초기화를 정의합니다.
+
+이 초기화는 초기화에 전달된 `species` 값이 빈 문자열인지 확인합니다.
+
+빈 문자열이 발견되면 초기화 실패가 트리거됩니다.
+
+그렇지 않으면 `species` 프로퍼티 값이 설정되고 초기화가 성공합니다.
+
+~~~ swift
+struct Animal {
+    let species: String
+    init?(species: String) {
+        if species.isEmpty { return nil }
+        self.species = species
+    }
+}
+~~~
+
+#
+
+이 실패 가능한 초기화를 사용하여 새로운 `Animal` 인스턴스 초기화를 시도하고 초기화 성공 여부를 확인할 수 있습니다.
+
+~~~ swift
+let someCreature = Animal(species: "Giraffe")
+// someCreature is of type Animal?, not Animal
+
+
+if let giraffe = someCreature {
+    print("An animal was initialized with a species of \(giraffe.species)")
+}
+// Prints "An animal was initialized with a species of Giraffe"
+~~~
+
+#
+
+실패 가능한 초기화의 `species` 파라미터에 빈 문자열 값을 전달하면 초기화가 초기화 실패를 트리거합니다.
+
+~~~ swift
+let anonymousCreature = Animal(species: "")
+// anonymousCreature is of type Animal?, not Animal
+
+
+if anonymousCreature == nil {
+    print("The anonymous creature couldn't be initialized")
+}
+// Prints "The anonymous creature couldn't be initialized"
+~~~
+
+> Note    
+> `"Giraffe"` 대신 `""` 와 같은 빈 문자열 값을 확인하는 것은 옵셔널 `String` 에 값이 없음을 나타내는 `nil` 을 확인하는 것과 다릅니다.
+> 위의 예제에서 빈 문자열 `""` 은 옵셔널이 아닌 유효한 `String` 문자열입니다.
+> 그러나 동물의 `species` 프로퍼티값으로 빈 문자열을 갖는 것은 적절하지 않습니다.
+> 이 제한 사항을 모델링 하기 위해 실패 가능한 초기화는 빈 문자열이 발견되면 초기화 실패를 트리거합니다.
+
+<br>
+
+### 열거형을 위한 실패 가능한 초기화 (Failable Initializers for Enumerations)
+
+
+
 
 
 
