--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1246,10 +1246,84 @@ if anonymousCreature == nil {
 
 ### 열거형을 위한 실패 가능한 초기화 (Failable Initializers for Enumerations)
 
+실패 가능한 초기화를 사용하여 하나 이사으이 파라미터를 기반으로 적절한 열거형 케이스를 선택할 수 있습니다.
+
+제공된 파라미터가 적절한 열거형 케이스와 일치하지 않으면 초기화가 실패할 수 있습니다.
+
+#
+
+아래 예제는 3가지 가능한 상태 (`kelvin`, `celsius`, `fahrenheit`) 를 가진 `TemperatureUnit` 이라는 열거형을 정의합니다.
+
+실패 가능한 초기화는 온도 기호를 나타내는 `Character` 값에 대한 적절한 열거형 케이스를 찾는데 사용됩니다.
+
+~~~ swift
+enum TemperatureUnit {
+    case kelvin, celsius, fahrenheit
+    init?(symbol: Character) {
+        switch symbol {
+        case "K":
+            self = .kelvin
+        case "C":
+            self = .celsius
+        case "F":
+            self = .fahrenheit
+        default:
+            return nil
+        }
+    }
+}
+~~~
+
+#
+
+해당 실패 가능한 초기화를 사용하여 3가지 가능한 상태에 대한 적절한 열거형 케이스를 선택하고 파라미터가 어떠한 상태도 일치하지 않은 경우 초기화가 실패하도록 할 수 있습니다.
+
+~~~ swift
+let fahrenheitUnit = TemperatureUnit(symbol: "F")
+if fahrenheitUnit != nil {
+    print("This is a defined temperature unit, so initialization succeeded.")
+}
+// Prints "This is a defined temperature unit, so initialization succeeded."
 
 
+let unknownUnit = TemperatureUnit(symbol: "X")
+if unknownUnit == nil {
+    print("This isn't a defined temperature unit, so initialization failed.")
+}
+// Prints "This isn't a defined temperature unit, so initialization failed."
+~~~
 
+<br>
 
+### 원시값이 있는 열거형에 대한 실패 가능한 초기화 (Failable Initializers for Enumerations with Raw Values)
+
+원시값이 있는 열거형은 적절한 원시값 타입의 `rawValue` 파라미터를 사용하고 일치하는 값을 찾으면 일치하는 열거형 케이스를 선택하거나 일치하는 값이 없으면 초기화 실패를 트리거하는 실패 가능한 초기화 `init?(rawValue:)` 를 자동으로 받습니다.
+
+#
+
+위의 `TemperatureUnit` 예제를 다시 작성하여 `Character` 타입의 원시값을 사용하고 `init?(rawValue:)` 초기화를 활용할 수 있습니다.
+
+~~~ swift
+enum TemperatureUnit: Character {
+    case kelvin = "K", celsius = "C", fahrenheit = "F"
+}
+
+let fahrenheitUnit = TemperatureUnit(rawValue: "F")
+if fahrenheitUnit != nil {
+    print("This is a defined temperature unit, so initialization succeeded.")
+}
+// Prints "This is a defined temperature unit, so initialization succeeded."
+
+let unknownUnit = TemperatureUnit(rawValue: "X")
+if unknownUnit == nil {
+    print("This isn't a defined temperature unit, so initialization failed.")
+}
+// Prints "This isn't a defined temperature unit, so initialization failed."
+~~~
+
+<br>
+
+### 초기화 실패 전파 (Propagation of Initialization Failure)
 
 
 
