--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1325,12 +1325,92 @@ if unknownUnit == nil {
 
 ### 초기화 실패 전파 (Propagation of Initialization Failure)
 
+클래스, 구조체 또는 열거형의 실패 가능한 초기화는 동일한 클래스, 구조체 또는 열거형의 실패 가능한 다른 초기화에 위임할 수 있습니다.
+
+마찬가지로 하위 클래스의 실패 가능한 초기화는 상위 클래스의 실패 가능한 초기화까지 위임할 수 있습니다.
+
+#
+
+두 경우 모두 초기화 실패를 유발하는 다른 초기화에 위임하면 전체 초기화 프로세스가 즉시 실패하고 추가 초기화 코드가 실행되지 않습니다.
+
+> Note    
+> 실패 가능한 초기화는 실패할 수 없는 초기화에 위임할 수도 있습니다.
+> 실패하지 않는 기존 초기화 프로세스에 실패 상태를 추가해야 하는 경우에 이 접근 방식을 사용합니다.
+
+#
+
+아래 예제는 `CartItem` 이라는 `Product` 의 하위 클래스를 정의합니다.
+
+`CartItem` 클래스는 온라인 장바구니에 있는 상품을 모델링합니다.
+
+`CartItem` 은 `quantity` 라는 상수 저장 프로퍼티를 도입하고 이 프로퍼티는 최소한 `1` 이상의 값을 갖도록 보장합니다.
+
+~~~ swift
+class Product {
+    let name: String
+    init?(name: String) {
+        if name.isEmpty { return nil }
+        self.name = name
+    }
+}
 
 
+class CartItem: Product {
+    let quantity: Int
+    init?(name: String, quantity: Int) {
+        if quantity < 1 { return nil }
+        self.quantity = quantity
+        super.init(name: name)
+    }
+}
+~~~
 
+`CartItem` 의 실패 가능한 초기화는 `quantity` 값에 `1` 또는 그 이상의 값을 받았는지 확인하는 것으로 시작됩니다.
 
+`quantity` 가 유효하지 않은 경우 전체 초기화 프로세스가 즉시 실패하고 더이상 추가 초기화 코드가 실행되지 않습니다.
 
+마찬가지로 `Product` 에 대한 실패 가능한 초기화는 `name` 값을 확인하고 `name` 이 빈 문자열이면 초기화 프로세스가 즉시 실패합니다.
 
+#
+
+비어 있지 않은 이름과 `1` 또는 그 이상의 수량으로 `CartItem` 인스턴스를 생성하면 초기화가 성공합니다.
+
+~~~ swift
+if let twoSocks = CartItem(name: "sock", quantity: 2) {
+    print("Item: \(twoSocks.name), quantity: \(twoSocks.quantity)")
+}
+// Prints "Item: sock, quantity: 2"
+~~~
+
+#
+
+`0` 의 `quantity` 값을 가진 `CartItem` 인스턴스를 생성하려고 하면 `CartItem` 초기화는 초기화에 실패합니다.
+
+~~~ swift
+if let zeroShirts = CartItem(name: "shirt", quantity: 0) {
+    print("Item: \(zeroShirts.name), quantity: \(zeroShirts.quantity)")
+} else {
+    print("Unable to initialize zero shirts")
+}
+// Prints "Unable to initialize zero shirts"
+~~~
+
+#
+
+마찬가지로 빈 `name` 을 가진 `CartItem` 인스턴스를 생성하려고 하면 상위 클래스 `Product` 초기화로 인해 초기화가 실패합니다.
+
+~~~ swift
+if let oneUnnamed = CartItem(name: "", quantity: 1) {
+    print("Item: \(oneUnnamed.name), quantity: \(oneUnnamed.quantity)")
+} else {
+    print("Unable to initialize one unnamed product")
+}
+// Prints "Unable to initialize one unnamed product"
+~~~
+
+<br>
+
+### 실패 가능한 초기화 재정의 (Overriding a Failable Initializer)
 
 
 
