--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1412,6 +1412,94 @@ if let oneUnnamed = CartItem(name: "", quantity: 1) {
 
 ### 실패 가능한 초기화 재정의 (Overriding a Failable Initializer)
 
+다른 초기화와 마찬가지로 하위 클래스에서 상위 클래스 실패 가능한 초기화를 재정의할 수 있습니다.
+
+또한 상위 클래스의 실패 불가능한 초기화를 하위 클래스의 실패 불가능한 초기화로 재정의할 수 있습니다.
+
+이를 통해 상위 클래스의 초기화가 실패하더라도 초기화를 실패할 수 없는 하위 클래스를 정의할 수 있습니다.
+
+#
+
+실패 가능한 상위 클래스 초기화를 실패 불가능한 하위 클래스 초기화로 재정의하는 경우 상위 클래스 초기화를 위임하는 유일한 방법은 실패 가능한 상위 클래스 초기화의 결과를 강제로 언래핑하는 것입니다.
+
+> Note    
+> 실패 가능한 초기화를 실패 불가능한 초기화로 재정의 할 수 있지만 그 반대는 불가능합니다.
+
+#
+
+아래 예제는 `Document` 라는 클래스를 정의합니다.
+
+이 클래스는 비어 있지 않은 문자열 값 또는 `nil` 은 가능하지만 빈 문자열은 불가능한, `name` 프로퍼티를 가지고 초기화될 수 있는 문서를 모델링 합니다.
+
+~~~ swift
+class Document {
+    var name: String?
+    // this initializer creates a document with a nil name value
+    init() {}
+    // this initializer creates a document with a nonempty name value
+    init?(name: String) {
+        if name.isEmpty { return nil }
+        self.name = name
+    }
+}
+~~~
+
+#
+
+다음 예제는 `AutomaticallyNamedDocument` 라는 `Document` 의 하위 클래스를 정의합니다.
+
+`AutomaticallyNamedDocument` 하위 클래스는 `Document` 에 의해 도입된 지정 초기화를 모두 재정의합니다.
+
+이러한 재정의는 인스턴스가 이름 없이 초기화되거나 빈 문자열이 `init(name:)` 초기화에 전달되는 경우 `AutomaticallyNamedDocument` 인스턴스가 `name` 의 초기값 `"[Untitled]"` 를 갖도록 보장합니다.
+
+~~~ swift
+class AutomaticallyNamedDocument: Document {
+    override init() {
+        super.init()
+        self.name = "[Untitled]"
+    }
+    override init(name: String) {
+        super.init()
+        if name.isEmpty {
+            self.name = "[Untitled]"
+        } else {
+            self.name = name
+        }
+    }
+}
+~~~
+
+#
+
+`AutomaticallyNamedDocument` 는 실패 불가능한 `init(name:)` 초기화로 상위 클래스의 실패 가능한 `init?(name:)` 초기화를 재정의 합니다.
+
+`AutomaticallyNamedDocument` 는 상위 클래스와는 다른 방식으로 빈 문자열 케이스를 처리하기 때문에 초기화는 실패할 필요가 없으며 대신 실패할 수 없는 버전의 초기화를 제공합니다.
+
+#
+
+하위 클래스의 실패 불가능한 초기화 구현의 일부로 상위 클래스에서 실패 가능한 초기화를 호출하기 위해 초기화에서 강제 언래핑을 사용할 수 있습니다.
+
+예를 들어 아래의 `UntitleDocument` 하위 클래스는 항상 `"[Untitled]"` 이름이 지정되며 상위 클래스의 실패 가능한 초기화 `init(name:)` 을 사용합니다.
+
+~~~ swift
+class UntitledDocument: Document {
+    override init() {
+        super.init(name: "[Untitled]")!
+    }
+}
+~~~
+
+이 경우 상위 클래스의 `init(name:)` 초기화가 이름으로 빈 문자열을 사용하여 호출되면 강제 언래핑 작업으로 인해 런타임 에러가 발생합니다.
+
+하지만 문자열 상수로 호출되기 때문에 초기화가 실패하지 않으므로 이 경우 런타임 에러가 발생하지 않는 것을 알 수 있습니다.
+
+<br>
+
+### init! 실패 가능한 초기화 (The init! Failable Initializer)
+
+
+
+
 
 
 
