--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1497,6 +1497,22 @@ class UntitledDocument: Document {
 
 ### init! 실패 가능한 초기화 (The init! Failable Initializer)
 
+일반적으로 `init` 키워드 뒤에 물음표를 배치하여 (`init?`) 적절한 타입의 옵셔널 인스턴스를 생성하는 실패 가능한 초기화를 정의합니다.
+
+또는 적절한 타입의 암시적으로 언래핑된 옵셔널 인스턴스를 생성하는 실패 가능한 초기화를 정의할 수 있습니다.
+
+물음표 대신에 `init` 키워드 뒤에 느낌표를 위치 시키면 됩니다. (`init!`)
+
+#
+
+`init?` 에서 `init!` 으로 또는 그반대로 위임할 수 있으며 `init?` 를 `init!` 으로 또는 그반대로 재정의 할 수 있습니다.
+
+`init` 에서 `init!` 으로 위임할 수도 있지만 그렇게 하면 `init!` 초기화에 의해 초기화가 실패하는 경우 어설션이 트리거됩니다.
+
+<br>
+
+## 필수 초기화 (Required Initializers)
+
 
 
 
