--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1513,7 +1513,36 @@ class UntitledDocument: Document {
 
 ## 필수 초기화 (Required Initializers)
 
+클래스의 모든 하위 클래스가 해당 초기화를 구현해야 함을 나타내기 위해 클래스 초기화 정의 앞에 `required` 수정자를 작성합니다.
 
+~~~ swift
+class SomeClass {
+    required init() {
+        // initializer implementation goes here
+    }
+}
+~~~
+
+#
+
+또한 필수 초기화의 모든 하위 클래스 구현 전에 `required` 수정자를 작성하여 초기화 요구사항이 체인의 추가 하위 클래스에 적용됨을 나타내야 합니다.
+
+필수 지정 초기화를 재정의할 때는 `override` 수정자를 작성하지 않습니다.
+
+~~~ swift
+class SomeSubclass: SomeClass {
+    required init() {
+        // subclass implementation of the required initializer goes here
+    }
+}
+~~~
+
+> Note    
+> 상속된 초기화로 요구사항을 충족할 수 있는 경우 필수 초기화의 명시적인 구현을 제공할 필요가 없습니다.
+
+<br>
+
+## 클로저 또는 함수를 사용하여 기본 프로퍼티 값 설정 (Setting a Default Property Value with a Closure or Function)
 
 
 
