--- a/Swift Documentation/2.Language Guide/14.Initialization.md
+++ b/Swift Documentation/2.Language Guide/14.Initialization.md
@@ -1544,14 +1544,90 @@ class SomeSubclass: SomeClass {
 
 ## 클로저 또는 함수를 사용하여 기본 프로퍼티 값 설정 (Setting a Default Property Value with a Closure or Function)
 
+저장 프로퍼티의 기본값에 사용자 정의 또는 설정이 필요한 경우 클로저나 전역 함수를 사용하여 해당 프로퍼티에 사용자 정의된 기본값을 제공할 수 있습니다.
 
+프로퍼티가 속한 타입의 새로운 인스턴스가 초기화될 때마다 클로저 또는 함수가 호출되고 해당 반환값이 프로퍼티의 기본값으로 할당됩니다.
 
+#
 
+이러한 종류의 클로저 또는 함수는 일반적으로 프로퍼티와 동일한 타입의 임시값을 생성하고 해당 값을 원하는 초기 상태를 나타내도록 조정한 다음 프로퍼티의 기본값으로 사용할 임시값을 반환합니다.
 
+#
 
+다음은 클로저를 사용하여 기본 프로퍼티 값을 제공하는 방법에 대한 기본 개요 입니다.
 
+~~~ swift
+class SomeClass {
+    let someProperty: SomeType = {
+        // create a default value for someProperty inside this closure
+        // someValue must be of the same type as SomeType
+        return someValue
+    }()
+}
+~~~
 
+클로저의 중괄호 끝에는 빈 소괄호 쌍이 옵니다.
 
+이것은 Swift 가 즉시 클로저를 실행하도록 지시합니다.
+
+이러한 소괄호를 생략하면 클로저의 반환값이 아닌 클로저 자체를 프로퍼티에 할당하려고 합니다.
+
+> Note    
+> 클로저를 사용하여 프로퍼티를 초기화하는 경우 클로저가 실행되는 시점에 인스턴스의 나머지 부분이 아직 초기화되지 않았다는 점을 기억해야 합니다.
+> 이것은 해당 프로퍼티에 기본값이 있더라도 클로저 내부에서 다른 프로퍼티 값에 접근할 수 없음을 의미합니다.
+> 또한 암시적 `self` 프로퍼티를 사용하거나 인스턴스 메서드를 호출할 수 없습니다.
+
+#
+
+아래 예제는 체스 게임용 보드를 모델링하는 `Chessboard` 라는 구조체를 정의합니다.
+
+체스는 검은색과 흰색 사각형이 번갈아 나타나는 8 x 8 보드에서 진행됩니다.
+
+<img width="450" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/5775d76c-7a73-40b7-a185-4562fccc8d7f">
+
+이 게임 보드를 표현하기 위해 `Chessboard` 구조체는 64개의 `Bool` 값의 배열인 `boardColors` 라는 단일 프로퍼티가 있습니다.
+
+배열의 `true` 값은 검은색 정사각형을 나타내고 `false` 값은 흰색 정사각형을 나타냅니다.
+
+배열의 첫번째 항목은 게임 보드의 좌측상단 사각형을 나타내고 배열의 마지막 항목은 게임 보드의 우측하단 사각형을 나타냅니다.
+
+#
+
+`boardColors` 배열은 색상값을 설정하기 위해 클로저로 초기화됩니다.
+
+~~~ swift
+struct Chessboard {
+    let boardColors: [Bool] = {
+        var temporaryBoard: [Bool] = []
+        var isBlack = false
+        for i in 1...8 {
+            for j in 1...8 {
+                temporaryBoard.append(isBlack)
+                isBlack = !isBlack
+            }
+            isBlack = !isBlack
+        }
+        return temporaryBoard
+    }()
+    func squareIsBlackAt(row: Int, column: Int) -> Bool {
+        return boardColors[(row * 8) + column]
+    }
+}
+~~~
+
+새로운 `Chessboard` 인스턴스가 생성될 때마다 클로저가 실행되고 `boardColors` 의 기본값은 계산되어 반환됩니다.
+
+위 예제의 클로저는 게임 보드의 각 사각형에 대한 적절한 색상을 계산하고 `temporaryBoard` 라는 임시 배열에 설정하며 설정이 완료되면 이 임시 배열을 클로저의 반환값으로 반환합니다.
+
+반환된 배열값은 `boardColors` 에 저장되고 유틸리티 함수 `squareIsBlackAt(row:coloumn:)` 으로 조회할 수 있습니다.
+
+~~~ swift
+let board = Chessboard()
+print(board.squareIsBlackAt(row: 0, column: 1))
+// Prints "true"
+print(board.squareIsBlackAt(row: 7, column: 7))
+// Prints "false"
+~~~
 
 ***
 
