--- a/Swift Documentation/2.Language Guide/15.Deinitialization.md
+++ b/Swift Documentation/2.Language Guide/15.Deinitialization.md
@@ -1,5 +1,51 @@
 # Deinitialization (초기화 해제)
 
+정리가 필요한 리소스를 해제합니다.
+
+클래스 인스턴스가 할당 해제되기 직전에 초기화 해제가 호출됩니다.
+
+`init` 키워드를 사용하여 초기화를 작성하는 방법과 유사하게 `deinit` 키워드를 사용하여 초기화 해제를 작성합니다.
+
+초기화 해제는 클래스 타입에서만 사용할 수 있습니다.
+
+<br>
+
+## 초기화 해제 작동 방식 (How Deinitialization Works)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
