--- a/Swift Documentation/2.Language Guide/15.Deinitialization.md
+++ b/Swift Documentation/2.Language Guide/15.Deinitialization.md
@@ -12,6 +12,46 @@
 
 ## 초기화 해제 작동 방식 (How Deinitialization Works)
 
+Swift 는 더이상 필요하지 않은 인스턴스를 자동으로 할당 해제하여 리소스를 확보합니다.
+
+Swift 는 [자동 참조 카운팅 (Automatic Reference Counting)]() 에 설명된 대로 자동 참조 카운팅 (ARC) 를 통해 인스턴스의 메모리 관리를 처리합니다.
+
+일반적으로 인스턴스가 할당 해제될 때 수동으로 정리를 수행할 필요가 없습니다.
+
+그러나 자체 리소스를 사용하여 작업하는 경우 몇가지 추가 정리를 직접 수행해야 할 수도 있습니다.
+
+예를 들어 사용자 정의 클래스를 생성하여 파일을 열고 파일에 일부 데이터를 작성하는 경우 클래스 인스턴스 할당이 취소되기 전에 파일을 닫아야 할 수도 있습니다.
+
+#
+
+클래스 정의에는 클래스당 최대 하나의 초기화 해제가 있을 수 있습니다.
+
+이 초기화 해제는 파라미터를 사용하지 않으며 소괄호 없이 작성됩니다.
+
+~~~ swift
+deinit {
+    // perform the deinitialization
+}
+~~~
+
+초기화 해제는 인스턴스가 할당 해제 되기 직전에 자동으로 호출됩니다.
+
+초기화 해제를 직접 호출하는 것은 허용되지 않습니다.
+
+상위 클래스 초기화 해제는 하위 클래스로 상속되고 상위 클래스 초기화 해제는 하위 클래스 초기화 해제 구현이 끝날 때 자동으로 호출됩니다.
+
+하위 클래스가 자체 초기화 해제를 제공하지 않더라도 상위 클래스 초기화 해제는 항상 호출됩니다.
+
+#
+
+인스턴스는 초기화 해제가 호출되기 전에는 할당이 해제되지 않기 때문에 초기화 해제는 호출된 인스턴스의 모든 프로퍼티에 접근할 수 있으며 이러한 프로퍼티를 기반으로 해당 동작을 수정할 수 있습니다.
+
+(예를 들어 닫아야 하는 파일의 이름 조회)
+
+<br>
+
+## 초기화 해제 동작 (Deinitializers in Action)
+
 
 
 
