--- a/Swift Documentation/2.Language Guide/15.Deinitialization.md
+++ b/Swift Documentation/2.Language Guide/15.Deinitialization.md
@@ -52,40 +52,128 @@ deinit {
 
 ## 초기화 해제 동작 (Deinitializers in Action)
 
+다음은 실행 중인 초기화 해제에 대한 동작의 예입니다.
 
+이 예제는 간단한 게임을 위해 `Bank` 와 `Player` 라는 2개의 새로운 타입을 정의합니다.
 
+`Bank` 클래스는 유통되는 코인이 10,000개를 넘을 수 없는 가상 화폐를 관리합니다.
 
+게임에서는 하나의 `Bank` 만 가질 수 있으므로 `Bank` 는 현재 상태를 저장하고 관리하는 타입 프로퍼티와 타입 메서드가 있는 클래스로 구현됩니다.
 
+~~~ swift
+class Bank {
+    static var coinsInBank = 10_000
+    static func distribute(coins numberOfCoinsRequested: Int) -> Int {
+        let numberOfCoinsToVend = min(numberOfCoinsRequested, coinsInBank)
+        coinsInBank -= numberOfCoinsToVend
+        return numberOfCoinsToVend
+    }
+    static func receive(coins: Int) {
+        coinsInBank += coins
+    }
+}
+~~~
 
+`Bank` 는 `coinsInBank` 프로퍼티를 통해 현재 코인의 갯수를 추적합니다.
 
+또한 코인의 분배와 수집을 처리하기 위해 `distribute(coins:)` 와 `receive(coins:)` 2개의 메서드를 제공합니다.
 
+#
 
+`distribute(coins:)` 메서드는 코인을 분배하기 전에 은행에 코인이 충분한지 확인합니다.
 
+코인이 충분하지 않으면 `Bank` 는 요청한 숫자보다 작은 숫자를 반환하고 코인이 은행에 남아있지 않은 경우 0을 반환합니다.
 
+제공된 실제 코인 수를 나타내는 정수값을 반환합니다.
 
+#
 
+`receive(coins:)` 메서드는 단순히 받은 코인의 갯수를 다시 은행의 코인 저장소에 추가합니다.
 
+#
 
+`Player` 클래스는 게임의 플레이어를 설명합니다.
 
+각 플레이어는 언제든지 지갑에 특정 수의 코인을 보관할 수 있습니다.
 
+이것은 플레이어의 `coinsInPurse` 프로퍼티에 표시됩니다.
 
+~~~ swift
+class Player {
+    var coinsInPurse: Int
+    init(coins: Int) {
+        coinsInPurse = Bank.distribute(coins: coins)
+    }
+    func win(coins: Int) {
+        coinsInPurse += Bank.distribute(coins: coins)
+    }
+    deinit {
+        Bank.receive(coins: coinsInPurse)
+    }
+}
+~~~
 
+각 `Player` 인스턴스는 초기화 하는 동안 은행에서 지정된 수의 코인을 시작 허용량으로 초기화 되지만 사용 가능한 코인이 충분하지 않은 경우 `Player` 인스턴스는 해당 수보다 적은 수의 코인을 받을 수 있습니다.
 
+#
 
+`Player` 클래스는 은행에서 특정 수의 코인을 검색하여 플레이어의 지갑에 추가하는 `win(coins:)` 메서드를 정의합니다.
 
+또한 `Player` 클래스는 `Player` 인스턴스가 할당 해제되기 직전에 호출되는 초기화 해제도 구현합니다.
 
+여기서 초기화 해제는 단순히 플레이어의 모든 코인을 은행에 반환합니다.
 
+~~~ swift
+var playerOne: Player? = Player(coins: 100)
+print("A new player has joined the game with \(playerOne!.coinsInPurse) coins")
+// Prints "A new player has joined the game with 100 coins"
+print("There are now \(Bank.coinsInBank) coins left in the bank")
+// Prints "There are now 9900 coins left in the bank"
+~~~
 
+#
 
+사용 가능한 경우 코인 100개를 요청하는 새로운 `Player` 인스턴스가 생성됩니다.
 
+`Player` 인스턴스는 `playerOne` 이라는 옵셔널 `Player` 변수에 저장됩니다.
 
+여기서 플레이어가 언제든지 게임을 떠날 수 있으므로 옵셔널 변수가 사용됩니다.
 
+옵셔널을 사용하면 현재 게임에 플레이어가 있는지 추적할 수 있습니다.
 
+#
 
+`playerOne` 은 옵셔널 이므로 해당 `coinsInPurse` 프로퍼티에 접근하여 기본 코인 수를 출력할 때와 해당 `win(coins:)` 메서드가 호출될 때마다 느낌표 (`!`) 를 붙입니다.
 
+~~~ swift
+playerOne!.win(coins: 2_000)
+print("PlayerOne won 2000 coins & now has \(playerOne!.coinsInPurse) coins")
+// Prints "PlayerOne won 2000 coins & now has 2100 coins"
+print("The bank now only has \(Bank.coinsInBank) coins left")
+// Prints "The bank now only has 7900 coins left"
+~~~
 
+여기서 플레이어는 2,000코인을 얻었습니다.
 
+이제 플레이어의 지갑에는 2,100개의 코인이 들어있고 은행에는 7,900개의 코인이 남아 있습니다.
 
+~~~ swift
+playerOne = nil
+print("PlayerOne has left the game")
+// Prints "PlayerOne has left the game"
+print("The bank now has \(Bank.coinsInBank) coins")
+// Prints "The bank now has 10000 coins"
+~~~
+
+이제 플레이어가 게임을 떠났습니다.
+
+이것은 옵셔널 변수 `playerOne` 을 "`Player` 인스턴스 없음" 을 의미하는 `nil` 로 설정하여 표시됩니다.
+
+이 시점에 `Player` 인스턴스에 대한 `playerOne` 변수의 참조가 끊어집니다.
+
+다른 프로퍼티 또는 변수는 여전히 `Player` 인스턴스를 참조하고 있으므로 메모리 확보를 위해 할당 해제 됩니다.
+
+이런 일이 발생하기 직전에 초기화 해제가 자동으로 호출되고 코인이 은행으로 반환됩니다.
 
 ***
 
