--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -1,5 +1,50 @@
 # Optional Chaining (옵셔널 체이닝)
 
+언래핑 없이 옵셔널 값의 멤버에 접근합니다.
+
+옵셔널 체이닝은 현재 `nil` 일 수 있는 옵셔널인 프로퍼티, 메서드 및 서브 스크립트를 조회하고 호출하는 프로세스입니다.
+
+옵셔널에 값이 포함되어 있으면 프로퍼티, 메서드 또는 서브 스크립트는 호출에 성공합니다.
+
+옵셔널이 `nil` 이면 프로퍼티, 메서드 또는 서브 스크립트 호출은 `nil` 을 반환합니다.
+
+여러 쿼리를 함께 연결할 수 있으며 체인의 어느 부분이라도 `nil` 이면 전체 체인은 정상적으로 실패합니다.
+
+> Note    
+> Swift 의 옵셔널 체이닝은 Objective-C 의 메시징 `nil` 과 유사하지만 모든 타입에 대해 동작하고 성공 또는 실패 여부를 확인할 수 있는 방식입니다.
+
+<br>
+
+## 강제 언래핑에 대한 대안으로서의 옵셔널 체이닝 (Optional Chaining as an Alternative to Forced Unwrapping)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ***
 
