--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -134,10 +134,116 @@ if let roomCount = john.residence?.numberOfRooms {
 
 ## 옵셔널 체이닝을 위한 모델 클래스 정의 (Defining Model Classes for Optional Chaining)
 
+하나 이상의 깊이의 프러퍼티, 메서드 그리고 서브 스크립트에 대한 호출과 함께 옵셔널 체이닝을 사용할 수 있습니다.
 
+이를 통해 상호 연관된 타입의 복잡한 모델 내에서 하위 프로퍼티로 내려갈 수 있으며 해당 하위 프로퍼티의 프로퍼티, 메서드 그리고 서브 스크립트에 접근할 수 있는지 여부를 확인할 수 있습니다.
 
+#
 
+아래의 코드는 여러 단계 옵셔널 체이닝의 예를 포함하여 여러 후속 예제에서 사용할 4개의 모델 클래스를 정의합니다.
 
+이 클래스는 관련 프로퍼티, 메서드 그리고 서브 스크립트를 가지는 `Room` 과 `Address` 클래스를 추가하여 위의 `Person` 과 `Residence` 모델을 확장합니다.
+
+#
+
+`Person` 클래스는 이전과 같은 방식으로 정의됩니다.
+
+~~~ swift
+class Person {
+    var residence: Residence?
+}
+~~~
+
+#
+
+`Residence` 클래스는 이전보다 더 복잡해졌습니다.
+
+이번에는 `Residence` 클래스가 `[Room]` 타입의 빈 배열로 초기화되는 `rooms` 라는 변수 프로퍼티를 정의합니다.
+
+~~~ swift
+class Residence {
+    var rooms: [Room] = []
+    var numberOfRooms: Int {
+        return rooms.count
+    }
+    subscript(i: Int) -> Room {
+        get {
+            return rooms[i]
+        }
+        set {
+            rooms[i] = newValue
+        }
+    }
+    func printNumberOfRooms() {
+        print("The number of rooms is \(numberOfRooms)")
+    }
+    var address: Address?
+}
+~~~
+
+이 `Residence` 버전에서는 `Room` 인스턴스 배열을 저장하므로 `numberOfRooms` 프로퍼티는 저장 프로퍼티가 아닌 계산 프로퍼티로 구현됩니다.
+
+계산 프로퍼티 `numberOfRooms` 는 단순히 `rooms` 배열에서 `count` 프로퍼티의 값을 반환합니다.
+
+#
+
+`rooms` 배열에 접근하는 짧은 구문을 위해 `Residence` 는 `rooms` 배열의 요청된 인덱스에 있는 공간에 대한 접근을 제공하는 읽기-쓰기 서브 스크립트를 제공합니다.
+
+#
+
+이 `Residence` 는 거주지의 방 갯수를 간단히 출력하는 `printNumberOfRooms` 라는 메서드도 제공합니다.
+
+#
+
+마지막으로 `Residence` 는 `Address?` 타입을 가지는 `address` 라는 옵셔널 프로퍼티를 정의합니다.
+
+이 프로퍼티의 `Address` 클래스 타입은 아래에 정의되어 있습니다.
+
+#
+
+`rooms` 배열에 사용되는 `Room` 클래스는 `name` 이라는 프로퍼티와 해당 프로퍼티를 적절한 방 이름으로 설정하는 초기화가 있는 간단한 클래스 입니다.
+
+~~~ swift
+class Room {
+    let name: String
+    init(name: String) { self.name = name }
+}
+~~~
+
+#
+
+이 모델의 마지막 클래스는 `Address` 입니다.
+
+이 클래스에는 `String?` 타입의 3가지 옵셔널 프로퍼티가 있습니다.
+
+`buildingName` 과 `buildingNumber` 인 첫번째, 두번째 프로퍼티는 주소의 일부로 특정 건물을 식별하는 대체 방법입니다.
+
+세번째 프로퍼티인 `street` 은 해당 주소의 거리 이름을 지정하는데 사용됩니다.
+
+~~~ swift
+class Address {
+    var buildingName: String?
+    var buildingNumber: String?
+    var street: String?
+    func buildingIdentifier() -> String? {
+        if let buildingNumber = buildingNumber, let street = street {
+            return "\(buildingNumber) \(street)"
+        } else if buildingName != nil {
+            return buildingName
+        } else {
+            return nil
+        }
+    }
+}
+~~~
+
+또한 `Address` 클래스는 반환 타입이 `String?` 인 `buildingIdentifier()` 라는 메서드도 제공합니다.
+
+이 메서드는 주소의 프로퍼티를 확인하고 값이 있는 경우 `buildingName` 을 반환하거나 둘다 값이 있는 경우 `street` 과 연결된 `buildingNumber` 를 반환하고 값이 없으면 `nil` 을 반환합니다.
+
+<br>
+
+## 옵셔널 체이닝을 통해 프로퍼티에 접근 (Accessing Properties Through Optional Chaining)
 
 
 
