--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -245,10 +245,67 @@ class Address {
 
 ## 옵셔널 체이닝을 통해 프로퍼티에 접근 (Accessing Properties Through Optional Chaining)
 
+[강제 언래핑에 대한 대안으로서의 옵셔널 체이닝 (Optional Chaining as an Alternative to Forced Unwrapping)]() 에서 설명한 대로 옵셔널 체이닝을 사용하여 옵셔널 값의 프로퍼티에 접근하고 해당 프로퍼티 접근이 성공적인지 확인할 수 있습니다.
 
+#
 
+위에 정의된 클래스를 사용하여 새로운 `Person` 인스턴스를 생성하고 이전과 같이 `numberOfRooms` 프로퍼티에 접근합니다.
 
+~~~ swift
+let john = Person()
+if let roomCount = john.residence?.numberOfRooms {
+    print("John's residence has \(roomCount) room(s).")
+} else {
+    print("Unable to retrieve the number of rooms.")
+}
+// Prints "Unable to retrieve the number of rooms."
+~~~
 
+`john.residence` 는 `nil` 이기 때문에 옵셔널 체이닝은 이전과 같은 방식으로 실패합니다.
+
+#
+
+옵셔널 체이닝을 통해 프로퍼티의 값을 설정하려고 시도할 수 있습니다.
+
+~~~ swift
+let someAddress = Address()
+someAddress.buildingNumber = "29"
+someAddress.street = "Acacia Road"
+john.residence?.address = someAddress
+~~~
+
+이 예제에서 `john.residence` 가 `nil` 이기 때문에 `john.residence` 의 `address` 프로퍼티를 설정하려는 시도가 실패합니다.
+
+#
+
+할당은 옵셔널 체이닝의 일부입니다.
+
+즉 연산자 `=` 오른쪽에 있는 코드는 평가되지 않습니다.
+
+이전 예제에서 상수에 접근해도 아무런 영향이 없기 때문에 `someAddress` 가 평가되지 않는다는 것을 쉽게 알 수 없습니다.
+
+아래의 목록은 동일한 할당을 수행하지만 주소를 생성하기 위해 함수를 사용합니다.
+
+이 함수는 값을 반환하기 전에 "Function was called" 를 출력하므로 `=` 연산자의 오른쪽이 평가되었는지 확인할 수 있습니다.
+
+~~~ swift
+func createAddress() -> Address {
+    print("Function was called.")
+
+    let someAddress = Address()
+    someAddress.buildingNumber = "29"
+    someAddress.street = "Acacia Road"
+
+    return someAddress
+}
+john.residence?.address = createAddress()
+~~~
+
+아무것도 출력되지 않기 때문에 `createAddress()` 함수가 호출되지 않았음을 알 수 있습니다.
+
+<br>
+
+## 옵셔널 체이닝을 통한 메서드 호출 (Calling Methods Through Optional Chaining)
 
 
 
