--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -243,7 +243,7 @@ class Address {
 
 <br>
 
-## 옵셔널 체이닝을 통해 프로퍼티에 접근 (Accessing Properties Through Optional Chaining)
+## 옵셔널 체이닝을 통한 프로퍼티 접근 (Accessing Properties Through Optional Chaining)
 
 [강제 언래핑에 대한 대안으로서의 옵셔널 체이닝 (Optional Chaining as an Alternative to Forced Unwrapping)]() 에서 설명한 대로 옵셔널 체이닝을 사용하여 옵셔널 값의 프로퍼티에 접근하고 해당 프로퍼티 접근이 성공적인지 확인할 수 있습니다.
 
@@ -307,10 +307,65 @@ john.residence?.address = createAddress()
 
 ## 옵셔널 체이닝을 통한 메서드 호출 (Calling Methods Through Optional Chaining)
 
+옵셔널 체이닝을 사용하여 옵셔널 값에 대한 메서드를 호출하고 해당 메서드 호출이 성공하는지 확인할 수 있습니다.
 
+해당 메서드가 반환값을 정의하지 않는 경우에도 이 작업을 수행할 수 있습니다.
 
+#
 
+`Residence` 클래스의 `printNumberOfRooms()` 메서드는 `numberOfRooms` 의 현재값을 출력합니다.
 
+메서드는 아래와 같습니다.
+
+~~~ swift
+func printNumberOfRooms() {
+    print("The number of rooms is \(numberOfRooms)")
+}
+~~~
+
+이 메서드는 반환 타입을 지정하지 않습니다.
+
+그러나 [반환값이 없는 함수 (Functions Without Return Values)]() 에 설명된 대로 반환 타입이 없는 함수와 메서드에는 암시적 반환 타입 `Void` 가 있습니다.
+
+이것은 `()` 의 값 또는 빈 튜플을 반환한다는 의미입니다.
+
+#
+
+옵셔널 체이닝을 사용하여 옵셔널 값에 대해 이 메서드를 호출하는 경우 반환값은 항상 옵셔널 타입이기 때문에 메서드의 반환 타입은 `Void` 가 아닌 `Void?` 가 됩니다.
+
+이를 통해 메서드 자체가 반환값을 정의하지 않더라도 `if` 문을 사용하여 `printNumberOfRooms()` 메서드 호출이 가능한지 여부를 확인할 수 있습니다.
+
+`printNumberOfRooms()` 호출의 반환값을 `nil` 과 비교하여 메서드 호출이 성공했는지 확인합니다.
+
+~~~ swift
+if john.residence?.printNumberOfRooms() != nil {
+    print("It was possible to print the number of rooms.")
+} else {
+    print("It was not possible to print the number of rooms.")
+}
+// Prints "It was not possible to print the number of rooms."
+~~~
+
+#
+
+옵셔널 체이닝을 통해 프로퍼티를 설정하려는 경우에도 마찬가지입니다.
+
+[옵셔널 체이닝을 통한 프로퍼티 접근 (Accessing Properties Through Optional Chaining)]() 에서 위의 예제는 `residence` 프로퍼티가 `nil` 임에도 불구하고 `john.residence` 에 대한 `address` 값을 설정하려고 시도합니다.
+
+옵셔널 체이닝을 통해 프로퍼티를 설정하는 모든 시도는 `nil` 과 비교하여 프로퍼티에 값이 성공적으로 설정되었는지 확인할 수 있는 `Void?` 타입의 값을 반환합니다.
+
+~~~ swift
+if (john.residence?.address = someAddress) != nil {
+    print("It was possible to set the address.")
+} else {
+    print("It was not possible to set the address.")
+}
+// Prints "It was not possible to set the address."
+~~~
+
+<br>
+
+## 옵셔널 체이닝을 통한 서브 스크립트 접근 (Accessing Subscripts Through Optional Chaining)
 
 
 
