--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -367,7 +367,77 @@ if (john.residence?.address = someAddress) != nil {
 
 ## 옵셔널 체이닝을 통한 서브 스크립트 접근 (Accessing Subscripts Through Optional Chaining)
 
+옵셔널 체이닝을 사용하여 옵셔널 값의 서브 스크립트에서 값을 검색 및 설정하고 해당 서브 스크립트 호출이 성공했는지 확인할 수 있습니다.
 
+> Note    
+> 옵셔널 체이닝을 통해 옵셔널 값의 서브 스크립트에 접근할 때 물음표를 서브 스크립트의 대괄호 뒤가 아닌 앞에 배치합니다.
+> 옵셔널 체이닝 물음표는 항상 옵셔널 표현식 부분의 바로 뒤에 위치합니다.
+
+#
+
+아래의 예제는 `Residence` 클래스에 정의된 서브 스크립트를 사용하여 `john.residence` 프로퍼티의 `rooms` 배열의 첫번째 방 이름을 검색하려고 시도합니다.
+
+현재 `john.residence` 는 `nil` 이기 때문에 서브 스크립트 호출이 실패합니다.
+
+~~~ swift
+if let firstRoomName = john.residence?[0].name {
+    print("The first room name is \(firstRoomName).")
+} else {
+    print("Unable to retrieve the first room name.")
+}
+// Prints "Unable to retrieve the first room name."
+~~~
+
+서브 스크립트 호출에서 옵셔널 체이닝 물음표는 `john.residence` 가 옵셔널 체이닝이 시도되는 옵셔널 값이기 때문에 `john.residence` 뒤와 대괄호 앞에 배치됩니다.
+
+#
+
+마찬가지로 옵셔널 체이닝을 사용하여 서브 스크립트를 통해 새로운 값을 설정할 수 있습니다.
+
+~~~ swift
+john.residence?[0] = Room(name: "Bathroom")
+~~~
+
+`residence` 가 현재 `nil` 이기 때문에 서브 스크립트 설정 시도는 실패합니다.
+
+#
+
+`rooms` 배열에 하나 이상의 `Room` 인스턴스가 있는 실제 `Residence` 인스턴스를 생성하고 `john.residence` 에 할당하는 경우 `Residence` 서브 스크립트를 사용하여 옵셔널 체이닝을 통해 `rooms` 배열의 실제 항목에 접근할 수 있습니다.
+
+~~~ swift
+let johnsHouse = Residence()
+johnsHouse.rooms.append(Room(name: "Living Room"))
+johnsHouse.rooms.append(Room(name: "Kitchen"))
+john.residence = johnsHouse
+
+if let firstRoomName = john.residence?[0].name {
+    print("The first room name is \(firstRoomName).")
+} else {
+    print("Unable to retrieve the first room name.")
+}
+// Prints "The first room name is Living Room."
+~~~
+
+<br>
+
+### 옵셔널 타입의 서브 스크립트 접근 (Accessing Subscripts of Optional Type)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
 
 
 
