--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -422,8 +422,27 @@ if let firstRoomName = john.residence?[0].name {
 
 ### 옵셔널 타입의 서브 스크립트 접근 (Accessing Subscripts of Optional Type)
 
+서브 스크립트가 Swift 의 `Dictionary` 타입의 키 하위 서브 스크립트와 같이 옵셔널 타입의 값을 반환하는 경우 하위 서브 스크립트의 닫는 대괄호 뒤에 물음표를 배치하여 옵셔널 반환값을 연결합니다.
 
+~~~ swift
+var testScores = ["Dave": [86, 82, 84], "Bev": [79, 94, 81]]
+testScores["Dave"]?[0] = 91
+testScores["Bev"]?[0] += 1
+testScores["Brian"]?[0] = 72
+// the "Dave" array is now [91, 82, 84] and the "Bev" array is now [80, 94, 81]
+~~~
 
+위의 예제는 `String` 키를 `Int` 값 배열에 매핑하는 2개의 키-값 쌍이 포함된 `testScores` 라는 딕셔너리를 정의합니다.
+
+이 예제에서는 옵셔널 체이닝을 사용하여 `"Dave"` 배열의 첫번째 항목에 `91` 을 설정하고 `"Bev"` 배열의 첫번째 항목에 `1` 을 더하고 `"Brian"` 배열의 첫번째 항목에 `72` 값을 설정하려고 합니다.
+
+`testScores` 딕셔너리에 `"Dave"` 와 `"Bev"` 키가 포함되어 있기 때문에 첫번째 두번째 호출은 성공합니다.
+
+`testScores` 딕셔너리에 `"Brian"` 키를 가지고 있지 않기 때문에 세번째 호출은 실패합니다.
+
+<br>
+
+## 여러 수준의 체인 연결 (Linking Multiple Levels of Chaining)
 
 
 
