--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -444,7 +444,75 @@ testScores["Brian"]?[0] = 72
 
 ## 여러 수준의 체인 연결 (Linking Multiple Levels of Chaining)
 
+여러 수준의 옵셔널 체이닝을 함께 연결하여 모델 내에서 프로퍼티, 메서드 그리고 서브 스크립트로 더 깊게 접근할 수 있습니다.
 
+그러나 여러 수준의 옵셔널 체이닝은 반환된 값에 더 많은 수준의 선택성을 추가하지 않습니다.
+
+다른 말로 하면
+
+- 조회하려는 타입이 옵셔널이 아닌 경우 옵셔널 체이닝 때문에 옵셔널이 됩니다.
+
+- 조회하려는 타입이 이미 옵셔널이면 체이닝 때문에 더 많은 옵셔널이 되지 않습니다.
+
+그러므로
+
+- 옵셔널 체이닝을 통해 `Int` 값을 조회하려고 하면 사용된 체이닝 수준에 관계없이 항상 `Int?` 가 반환됩니다.
+
+- 마찬가지로 옵셔널 체이닝을 통해 `Int?` 값을 조회하려고 하면 사용된 체이닝 수준과 관계없이 항상 `Int?` 가 반환됩니다.
+
+#
+
+아래의 예제는 `john` 의 `residence` 프로퍼티에 `address` 프로퍼티에 `street` 프로퍼티를 접근합니다.
+
+여기에서는 2단계 수준의 옵셔널 체이닝을 사용하여 `residence` 와 `address` 프로퍼티를 연결하며 둘다 옵셔널 타입입니다.
+
+~~~ swift
+if let johnsStreet = john.residence?.address?.street {
+    print("John's street name is \(johnsStreet).")
+} else {
+    print("Unable to retrieve the address.")
+}
+// Prints "Unable to retrieve the address."
+~~~
+
+`john.residence` 의 값은 현재 유효한 `Residence` 인스턴스를 가지고 있습니다.
+
+그러나 `john.residence.address` 의 값은 현재 `nil` 입니다.
+
+이로 인해 `john.residence?.address?.street` 을 호출하면 실패합니다.
+
+#
+
+위의 예제에서는 `street` 프로퍼티 값을 조회하려고 시도하고 있습니다.
+
+이 프로퍼티의 타입은 `String?` 입니다.
+
+따라서 프로퍼티의 기본 옵셔널 타입 외에 2단계 수준의 옵셔널 체이닝이 적용되더라도 `john.residence?.address?.street` 의 반환값은 `String?` 입니다.
+
+#
+
+실제 `Address` 인스턴스를 `john.residence.address` 에 대한 값으로 설정하고 주소의 `street` 프로퍼티에 실제 값을 설정하면 여러 수준의 옵셔널 체이닝을 통해 `street` 프로퍼티 값에 접근할 수 있습니다.
+
+~~~ swift
+let johnsAddress = Address()
+johnsAddress.buildingName = "The Larches"
+johnsAddress.street = "Laurel Street"
+john.residence?.address = johnsAddress
+
+
+if let johnsStreet = john.residence?.address?.street {
+    print("John's street name is \(johnsStreet).")
+} else {
+    print("Unable to retrieve the address.")
+}
+// Prints "John's street name is Laurel Street."
+~~~
+
+이 예제에서 `john.residence` 의 값은 현재 유효한 `Residence` 인스턴스 이므로 `john.residence` 의 `address` 프로퍼티에 값을 설정하는 것이 성공합니다.
+
+<br>
+
+## 옵셔널 반환값으로 메서드 체이닝 (Chaining on Methods with Optional Return Values)
 
 
 
