--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -514,23 +514,43 @@ if let johnsStreet = john.residence?.address?.street {
 
 ## 옵셔널 반환값으로 메서드 체이닝 (Chaining on Methods with Optional Return Values)
 
+이전 예제에서는 옵셔널 체이닝을 통해 옵셔널 타입의 프로퍼티 값을 조회하는 방법을 보여줍니다.
 
+또한 옵셔널 체이닝을 사용하여 옵셔널 타입의 값을 반환하는 메서드를 호출하고 필요한 경우 해당 메서드의 반환값을 연결할 수도 있습니다.
 
+#
 
+아래 예제에서는 옵셔널 체이닝을 통해 `Address` 클래스의 `buildingIdentifier()` 메서드를 호출합니다.
 
+이 메서드는 `String?` 타입의 값을 반환합니다.
 
+위에서 설명한 대로 옵셔널 체이닝 이후 이 메서드 호출의 최종 반환 타입도 `String?` 입니다.
 
+~~~ swift
+if let buildingIdentifier = john.residence?.address?.buildingIdentifier() {
+    print("John's building identifier is \(buildingIdentifier).")
+}
+// Prints "John's building identifier is The Larches."
+~~~
 
+#
 
+이 메서드의 반환 값에 대한 추가 옵셔널 체이닝을 수행하려면 메서드의 괄호 뒤에 옵셔널 체이닝 물음표를 위치시키면 됩니다.
 
+~~~ swift
+if let beginsWithThe =
+    john.residence?.address?.buildingIdentifier()?.hasPrefix("The") {
+    if beginsWithThe {
+        print("John's building identifier begins with \"The\".")
+    } else {
+        print("John's building identifier doesn't begin with \"The\".")
+    }
+}
+// Prints "John's building identifier begins with "The"."
+~~~
 
- 
-
-
-
-
-
-
+> Note    
+> 위의 예제에서 연결하려는 옵셔널 값이 `buildingIdentifier()` 메서드 자체가 아닌 `buildingIdentifier()` 메서드의 반환 값이기 때문에 소괄호 뒤에 옵셔널 체이닝 물음표를 배치합니다.
 
 ***
 
