--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -2,6 +2,32 @@
 
 에러에 응답하고 복구합니다.
 
+에러 처리는 프로그램의 에러 조건에 응답하고 복구하는 프로세스입니다.
+
+Swift 는 런타임에 복구 가능한 에러 발생, 포착, 전파 및 조작에 대한 최고 수준의 지원을 제공합니다.
+
+#
+
+일부 작업은 항상 실행을 완료하거나 유용한 출력을 생성한다고 보장되지 않습니다.
+
+옵셔널은 값이 없음을 나타내는데 사용되지만 작업이 실패할 경우 코드가 그에 따라 응답할 수 있도록 실패의 원인을 이해하는 것이 유용한 경우가 많습니다.
+
+#
+
+예를 들어 디스크의 파일에서 데이터를 읽고 처리하는 작업을 생각해 보세요.
+
+지정된 경로에 파일이 존재하지 않거나, 파일에 읽기 권한이 없거나, 파일이 적절한 형식으로 인코딩 되지 않은 경우를 포함하여 작업이 실패할 수 있는 여러가지 방법이 있습니다.
+
+이러한 다양한 상황을 구별하면 프로그램에서 일부 에러를 해결하고 해결할 수 없는 에러를 사용자에게 전달할 수 있습니다.
+
+> Note    
+> Swift 의 에러 처리는 Cocoa 및 Objective-C 의 `NSError` 클래스를 사용하는 에러 처리 패턴과 상호 운용됩니다.
+> 이 클래스에 대한 자세한 내용은 [Swift 에서 Cocoa 에러 처리 (Handling Cocoa Errors in Swift)]() 를 참조하세요.
+
+<br>
+
+## 에러 표현과 던지기 (Representing and Throwing Errors)
+
 
 
 
