--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -28,7 +28,39 @@ Swift 는 런타임에 복구 가능한 에러 발생, 포착, 전파 및 조작
 
 ## 에러 표현과 던지기 (Representing and Throwing Errors)
 
+Swift 에서 에러는 `Error` 프로토콜을 준수하는 타입의 값으로 표시됩니다.
 
+이 빈 프로토콜은 에러 처리에 타입을 사용할 수 있음을 나타냅니다.
+
+#
+
+Swift 열거형은 관련된 에러 조건의 그룹을 모델링하는데 특히 적합하며 관련 값을 사용하여 에러의 성격에 대한 추가 정보를 전달할 수 있습니다.
+
+예를 들어 게임 내에서 자동 판매기 작동 에러 조건을 표현한느 방법은 다음과 같습니다.
+
+~~~ swift
+enum VendingMachineError: Error {
+    case invalidSelection
+    case insufficientFunds(coinsNeeded: Int)
+    case outOfStock
+}
+~~~
+
+#
+
+에러를 발생시키면 예상치 못한 일이 발생하여 정상적인 실행 흐름을 계속할 수 없음을 나타낼 수 있습니다.
+
+`throw` 구문을 사용하여 에러를 발생시킵니다.
+
+예를 들어 아래의 코드는 자동 판매기에서 5개의 추가 코인이 필요함을 나타내는 에러를 발생시킵니다.
+
+~~~ swift
+throw VendingMachineError.insufficientFunds(coinsNeeded: 5)
+~~~
+
+<br>
+
+## 에러 처리 (Handling Errors)
 
 
 
