--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -62,6 +62,35 @@ throw VendingMachineError.insufficientFunds(coinsNeeded: 5)
 
 ## 에러 처리 (Handling Errors)
 
+에러가 발생하면 주변 코드의 일부분이 에러 처리를 담당해야 합니다.
+
+예를 들어 문제를 수정하거나 대체 접근 방식을 시도하거나 사용자에게 에러를 알리는 등의 작업을 수행합니다.
+
+#
+
+Swift 에는 에러를 처리하는 4가지 방법이 있습니다.
+
+함수에서 해당 함수를 호출하는 코드로 에러를 전파하거나 `do-catch` 문을 사용하여 에러를 처리하거나 에러를 옵셔널 값으로 처리하거나 에러가 발생하지 않을 것이라고 주장할 수 있습니다.
+
+각 접근 방식은 아래 섹션에 설명되어 있습니다.
+
+#
+
+함수에서 에러가 발생하면 프로그램의 흐름이 변경되므로 코드에서 에러가 발생할 수 있는 위치를 빠르게 식별할 수 있는 것이 중요합니다.
+
+코드에서 이러한 위치를 식별하려면 에러를 발생시킬 수 있는 함수, 메서드 또는 초기화 구문을 호출하는 코드 조각 앞에 `try` 또는 `try?` 또는 `try!` 키워드를 작성합니다.
+
+이러한 키워드는 아래 섹션에 설명되어 있습니다.
+
+> Note    
+> Swift 의 에러 처리는 `try`, `catch` 그리고 `throw` 키워드를 사용하는 다른 언어의 에러 처리와 유사합니다.
+> Objective-C 를 포함한 많은 언어의 에러 처리와 달리 Swift 의 에러 처리에는 계산 비용이 많이 들 수 있는 프로세스인 호출 스택 해제가 포함되지 않습니다.
+> 따라서 `throw` 문의 성능 특성은 `return` 문의 성능 특성과 비슷합니다.
+
+<br>
+
+### 던지기 함수를 이용한 에러 전파 (Propagating Errors Using Throwing Functions)
+
 
 
 
