--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -89,10 +89,114 @@ Swift 에는 에러를 처리하는 4가지 방법이 있습니다.
 
 <br>
 
-### 던지기 함수를 이용한 에러 전파 (Propagating Errors Using Throwing Functions)
+### Throwing 함수를 이용한 에러 전파 (Propagating Errors Using Throwing Functions)
+
+함수, 메서드 또는 초기화가 에러를 던질 수 있음을 나타내려면 함수의 선언에서 파라미터 뒤에 `throws` 키워드를 작성합니다.
+
+`throws` 로 표시된 함수는 throw 함수 라고 합니다.
+
+함수가 반환 타입을 지정하는 경우 반환 화살표 (`->`) 앞에 `throws` 키워드를 작성합니다.
+
+~~~ swift
+func canThrowErrors() throws -> String
+
+func cannotThrowErrors() -> String
+~~~
+
+throw 함수는 함수 내부에서 발생한 에러를 호출된 범위로 전파합니다.
+
+> Note    
+> throw 함수만 에러를 전파할 수 있습니다.
+> throws 선언이 되지 않은 함수 내에서 발생한 모든 에러는 함수 내에서 처리되어야 합니다.
+
+#
+
+아래 예제에서 `VendingMachine` 클래스는 요청한 항목을 사용할 수 없거나 재고가 없거나 현재 예치된 금액을 초과하는 비용이 있는 경우 적절한 `VendingMachineError` 를 던지는 `vend(itemNamed:)` 메서드를 가지고 있습니다.
+
+~~~ swift
+struct Item {
+    var price: Int
+    var count: Int
+}
 
 
+class VendingMachine {
+    var inventory = [
+        "Candy Bar": Item(price: 12, count: 7),
+        "Chips": Item(price: 10, count: 4),
+        "Pretzels": Item(price: 7, count: 11)
+    ]
+    var coinsDeposited = 0
 
+    func vend(itemNamed name: String) throws {
+        guard let item = inventory[name] else {
+            throw VendingMachineError.invalidSelection
+        }
+
+        guard item.count > 0 else {
+            throw VendingMachineError.outOfStock
+        }
+
+        guard item.price <= coinsDeposited else {
+            throw VendingMachineError.insufficientFunds(coinsNeeded: item.price - coinsDeposited)
+        }
+
+        coinsDeposited -= item.price
+
+        var newItem = item
+        newItem.count -= 1
+        inventory[name] = newItem
+
+        print("Dispensing \(name)")
+    }
+}
+~~~
+
+`vend(itemNamed:)` 메서드의 구현은 `guard` 문을 사용하여 메서드를 일찍 종료시키고 간식 구매 요구사항 중 하나라도 충족되지 않으면 적절한 에러를 발생시킵니다.
+
+`throw` 문은 프로그램 제어를 즉시 전달하기 때문에 모든 요구사항이 충족되는 경우에만 항목이 판매됩니다.
+
+#
+
+`vend(itemNamed:)` 메서드는 발생하는 모든 에러를 전파하기 때문에 이 메서드를 호출하는 코드는 `do-catch` 문, `try?` 또는 `try!` 를 사용하여 에러를 처리하거나 계속해서 전파해야 합니다.
+
+예를 들어 아래 예제의 `buyFavoriteSnack(person:vendingMachine:)` 은 throw 함수이며 `vend(itemNamed:)` 메서드에서 발생한 모든 에러는 `buyFavoriteSnack(person:vendingMachine:)` 함수가 호출되는 지점까지 전파됩니다.
+
+~~~ swift
+let favoriteSnacks = [
+    "Alice": "Chips",
+    "Bob": "Licorice",
+    "Eve": "Pretzels",
+]
+func buyFavoriteSnack(person: String, vendingMachine: VendingMachine) throws {
+    let snackName = favoriteSnacks[person] ?? "Candy Bar"
+    try vendingMachine.vend(itemNamed: snackName)
+}
+~~~
+
+이 에제에서 `buyFavoriteSnack(person:vendingMachine:)` 함수는 주어진 사람의 좋아하는 간식을 찾고 `vending(itemNamed:)` 메서드를 호출하여 구매하려고 합니다.
+
+`vend(itemNamed:)` 메서드는 에러를 발생시킬 수 있으므로 앞에 `try` 키워드를 붙여 호출합니다.
+
+#
+
+throw 초기화는 throw 함수와 같은 방법으로 에러를 전파할 수 있습니다.
+
+예를 들어 아래 `PurchasedSnack` 구조체에 대한 초기화는 초기화 프로세스의 일부분으로 throw 함수를 호출하고 발생한 에러를 호출자에게 전파하여 처리합니다.
+
+~~~ swift
+struct PurchasedSnack {
+    let name: String
+    init(name: String, vendingMachine: VendingMachine) throws {
+        try vendingMachine.vend(itemNamed: name)
+        self.name = name
+    }
+}
+~~~
+
+<br>
+
+### Do-Catch 를 사용하여 에러 처리 (Handling Errors Using Do-Catch)
 
 
 
