--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -198,9 +198,129 @@ struct PurchasedSnack {
 
 ### Do-Catch 를 사용하여 에러 처리 (Handling Errors Using Do-Catch)
 
+`do-catch` 문을 사용하여 코드 블럭을 실행하여 에러를 처리합니다.
 
+`do` 절의 코드에서 에러가 발생하면 에러를 처리할 수 있는 `catch` 절을 결정하기 위해 `do` 절과 일치시킵니다.
 
+#
 
+`do-catch` 문의 일반적인 형식은 다음과 같습니다.
+
+~~~ swift
+do {
+    try <#expression#>
+    <#statements#>
+} catch <#pattern 1#> {
+    <#statements#>
+} catch <#pattern 2#> where <#condition#> {
+    <#statements#>
+} catch <#pattern 3#>, <#pattern 4#> where <#condition#> {
+    <#statements#>
+} catch {
+    <#statements#>
+}
+~~~
+
+해당 `catch` 절이 처리할 수 있는 에러를 나타내기 위해 `catch` 키워드 뒤에 패턴을 작성합니다.
+
+`catch` 절에 패턴이 없는 경우 `catch` 절은 모든 에러와 일치하고 `error` 라는 이름을 가진 지역 상수에 바인딩합니다.
+
+패턴 일치에 대한 자세한 내용은 [패턴 (Patterns)]() 을 참조하세요.
+
+#
+
+예를 들어 다음 코드는 `VendingMachineError` 열거형의 3가지 케이스 모두와 일치합니다.
+
+~~~ swift
+var vendingMachine = VendingMachine()
+vendingMachine.coinsDeposited = 8
+do {
+    try buyFavoriteSnack(person: "Alice", vendingMachine: vendingMachine)
+    print("Success! Yum.")
+} catch VendingMachineError.invalidSelection {
+    print("Invalid Selection.")
+} catch VendingMachineError.outOfStock {
+    print("Out of Stock.")
+} catch VendingMachineError.insufficientFunds(let coinsNeeded) {
+    print("Insufficient funds. Please insert an additional \(coinsNeeded) coins.")
+} catch {
+    print("Unexpected error: \(error).")
+}
+// Prints "Insufficient funds. Please insert an additional 2 coins."
+~~~
+
+위의 예제에서 `buyFavoriteSnack(person:vendingMachine)` 함수는 에러가 발생할 수 있으므로 `try` 표현식으로 호출됩니다.
+
+에러가 발생하면 실행이 즉시 `catch` 절로 이전되어 전파를 계속 허용할지 여부를 결정합니다.
+
+일치하는 패턴이 없으면 에러는 마지막 `catch` 절에 의해 포착되고 지역 상수 `error` 에 바인딩됩니다.
+
+에러가 발생하지 않으면 `do` 구문의 나머지 명령문이 실행됩니다.
+
+#
+
+`catch` 절은 `do` 절에서 발생할 수 있는 모든 에러를 처리할 필요는 없습니다.
+
+어떤 `catch` 절도 에러를 처리하지 않으면 에러가 주변 범위로 전파됩니다.
+
+그러나 전파된 에러는 일부 주변 범위에서 처리되어야 합니다.
+
+throw 하지 않는 함수에서는 `do-catch` 문에서 에러를 처리해야합니다.
+
+throw 하는 함수에서는 `do-catch` 문이나 호출자가 에러를 처리해야 합니다.
+
+에러가 처리되지 않고 최상위 범위로 전파되면 런타임 에러가 발생합니다.
+
+#
+
+예를 들어 위의 예제는 호출 함수에서 `VendingMachineError` 가 아닌 모든 에러를 포착하도록 작성할 수 있습니다.
+
+~~~ swift
+func nourish(with item: String) throws {
+    do {
+        try vendingMachine.vend(itemNamed: item)
+    } catch is VendingMachineError {
+        print("Couldn't buy that from the vending machine.")
+    }
+}
+
+do {
+    try nourish(with: "Beet-Flavored Chips")
+} catch {
+    print("Unexpected non-vending-machine-related error: \(error)")
+}
+// Prints "Couldn't buy that from the vending machine."
+~~~
+
+`nourish(with:)` 함수에서 `vend(itemNamed:)` 가 `VendingMachineError` 열거형의 케이스 중 하나의 에러를 발생시키면 `nourish(with:)` 는 메세지를 출력하여 에러를 처리합니다.
+
+그렇지 않으면 `nourish(with:)` 는 호출 부분으로 에러를 전파합니다.
+
+그런다음 일반 `catch` 절에서 에러를 포착합니다.
+
+#
+
+여러 관련 에러를 잡는 또 다른 방법은 `catch` 뒤에 콤마로 구분하여 나열하는 것입니다.
+
+~~~ swift
+func eat(item: String) throws {
+    do {
+        try vendingMachine.vend(itemNamed: item)
+    } catch VendingMachineError.invalidSelection, VendingMachineError.insufficientFunds, VendingMachineError.outOfStock {
+        print("Invalid selection, out of stock, or not enough money.")
+    }
+}
+~~~
+
+`eat(item:)` 함수는 포착할 자판기 에러를 나열하고 해당 에러 텍스트는 해당 목록의 항목에 해당합니다.
+
+나열된 3가지 에러 중 하나라도 발생하면 이 `catch` 절은 메세지를 출력하여 처리합니다.
+
+나중에 추가될 수 있는 자판기 에러를 포함하여 다른 모든 에러는 주변 범위로 전파됩니다.
+
+<br>
+
+### 에러를 옵셔널 값으로 변환 (Converting Errors to Optional Values)
 
 
 
