--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -322,7 +322,52 @@ func eat(item: String) throws {
 
 ### 에러를 옵셔널 값으로 변환 (Converting Errors to Optional Values)
 
+에러를 옵셔널 값으로 변환하여 처리하기 위해 `try?` 를 사용합니다.
 
+`try?` 표현식을 평가하는 동안 에러가 발생하면 표현식의 값은 `nil` 입니다.
+
+예를 들어 아래 코드에서 `x` 와 `y` 는 동일한 값과 동작을 갖습니다.
+
+~~~ swift
+func someThrowingFunction() throws -> Int {
+    // ...
+}
+
+let x = try? someThrowingFunction()
+
+let y: Int?
+do {
+    y = try someThrowingFunction()
+} catch {
+    y = nil
+}
+~~~
+
+`someThrowingFunction()` 이 에러가 발생하는 경우 `x` 와 `y` 의 값은 `nil` 입니다.
+
+그렇지 않은 경우 `x` 와 `y` 의 값은 함수가 반환한 값입니다.
+
+`x` 와 `y` 는 `someThrowingFunction()` 이 반환하는 타입의 옵셔널 입니다.
+
+여기서 함수는 정수를 반환하므로 `x` 와 `y` 는 옵셔널 정수입니다.
+
+#
+
+`try?` 를 사용하면 모든 에러를 동일한 방식으로 처리하려는 경우 간결한 에러 처리 코드를 작성할 수 있습니다.
+
+예를 들어 다음 코드는 여러 접근 방식을 사용하여 데이터를 가져오거나 모든 접근 방식이 실패할 경우 `nil` 을 반환합니다.
+
+~~~ swift
+func fetchData() -> Data? {
+    if let data = try? fetchDataFromDisk() { return data }
+    if let data = try? fetchDataFromServer() { return data }
+    return nil
+}
+~~~
+
+<br>
+
+### 에러 전파 비활성화 (Disabling Error Propagation)
 
 
 
