--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -369,26 +369,80 @@ func fetchData() -> Data? {
 
 ### 에러 전파 비활성화 (Disabling Error Propagation)
 
+때로는 throw 함수나 메서드가 실제로 런타임에 에러를 던지지 않는다는 것을 알 수도 있습니다.
+
+이러한 경우 표현식 앞에 `try!` 를 작성하여 에러 전파를 비활성화하고 에러가 발생하지 않는다는 런타임 어설션으로 호출을 래핑할 수 있습니다.
+
+실제로 에러가 발생하면 런타임 에러가 발생합니다.
+
+#
+
+예를 들어 다음 코드는 지정된 경로에 이미지 리소스를 로드하거나 이미지를 로드할 수 없는 경우 에러를 발생시키는 `loadImage(atPath:)` 함수를 사용합니다.
+
+이러한 경우 이미지가 애플리케이션과 함께 제공되어 런타임 시 에러가 발생하지 않으므로 에러 전파를 비활성화하는 것이 적절합니다.
+
+~~~ swift
+let photo = try! loadImage(atPath: "./Resources/John Appleseed.jpg")
+~~~
+
+<br>
+
+## 에러 타입 지정 (Specifying the Error Type)
+
+위의 모든 예제에서는 가장 일반적인 종류의 에러 처리를 사용합니다.
 
 
 
 
 
+<br>
 
+## 정리 작업 지정 (Specifying Cleanup Actions)
 
+`defer` 문을 사용하여 코드 실행이 현재 코드 블럭을 떠나기 직전에 어떠한 작업을 실행합니다.
 
+이 명령문을 사용하면 실행이 현재 코드 블럭을 어떻게 떠나는지와 관계없이 수행해야 하는 모든 필요한 정리 작업을 수행할 수 있습니다.
 
+에러가 발생했거나 또는 `return` 또는 `break` 와 같은 명령문에 의해 종료되었는지 여부입니다.
 
+예를 들어 `defer` 명령문을 사용하여 파일 설명자가 닫히고 수동으로 할당된 메모리가 해제되도록 할 수 있습니다.
 
+#
 
+`defer` 문은 현재 범위가 종료될 때까지 실행을 연기합니다.
 
+이 명령문은 `defer` 키워드와 나중에 실행될 명령문으로 구성되어 있습니다.
 
+지연된 구문은 `break` 또는 `return` 문과 같이 밖으로 제어를 전송하거나 에러를 발생시키는 코드를 포함할 수 없습니다.
 
+지연된 작업은 소스 코드에 작성된 순서와 반대로 실행됩니다.
 
+즉 첫번째 `defer` 문의 코드는 마지막으로 실행되고 두번째 `defer` 문의 코드는 마지막에서 두번째로 실행되는 식입니다.
 
+소스 코드 순서의 마지막 `defer` 문이 가장 먼저 실행됩니다.
 
+~~~ swift
+func processFile(filename: String) throws {
+    if exists(filename) {
+        let file = open(filename)
+        defer {
+            close(file)
+        }
+        while let line = try file.readline() {
+            // Work with the file.
+        }
+        // close(file) is called here, at the end of the scope.
+    }
+}
+~~~
 
+위의 에제에서는 `open(_:)` 함수에 `close(_:)` 에 대한 호출이 있는지 확인하기 위해 `defer` 문을 사용합니다.
 
+#
+
+에러 처리 코드가 관련되지 않은 경우에도 `defer` 문을 사용할 수 있습니다.
+
+자세한 내용은 [지연된 작업 (Deferred Actions)]() 을 참조하세요.
 
 ***
 
