--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -389,7 +389,39 @@ let photo = try! loadImage(atPath: "./Resources/John Appleseed.jpg")
 
 ## 에러 타입 지정 (Specifying the Error Type)
 
-위의 모든 예제에서는 가장 일반적인 종류의 에러 처리를 사용합니다.
+위의 모든 예제에서는 가장 일반적인 종류의 에러 처리를 사용하는데 코드가 실행중 발생할 수 있는 모든 에러는 `Error` 프로토콜을 준수하는 모든 타입의 값이 될 수 있습니다.
+
+이 접근 방식은 코드가 실행되는 동안 발생할 수 있는 모든 에러를 미리 알 수 없다는 현실을 반영하며 특히 다른 곳에서 발생한 에러를 전파할 때 그렇습니다.
+
+또한 에러가 시간이 지남에 따라 변경될 수 있다는 사실도 반영합니다.
+
+라이브러리의 새로운 버전 (해당 라이브러리의 종속성을 포함) 에서 새로운 에러를 발생시킬 수 있으며 실제 사용자 구성의 풍부한 복잡성은 개발 또는 테스트 중에는 보이지 않았던 에러 모드를 노출시킬 수 있습니다.
+
+위의 예제에서 에러 처리 코드는 특정 `catch` 절이 없는 에러를 처리하기 위해 기본 케이스가 항상 포함됩니다.
+
+#
+
+대부분의 Swift 코드에서는 발생하는 에러의 타입을 지정하지 않습니다.
+
+그러나 다음과 같은 특별한 경우에는 코드가 특정 타입의 에러만 발생시키도록 제한할 수 있습니다.
+
+- 동적 메모리 할당을 지원하지 않는 임베디드 시스템에서 코드를 실행하는 경우 `Error` 또는 다른 박스형 프로토콜 타입의 인스턴스를 발생시키려면 에러를 저장하기 위해 런타임에 메모리를 할당해야 합니다. 반면 특정 타입의 에러를 발생시키면 Swift 는 에러에 대한 힙 할당을 피할 수 있습니다.
+
+- 에러가 라이브러리와 같은 코드의 일부 유닛의 구현 세부 사항이고 해당 코드에 대한 인터페이스의 일부가 아닌 경우 이러한 에러는 라이브러리에서만 발생하고 다른 종속성이나 라이브러리의 클라이언트에서 발생하지 않으므로 가능한 모든 실패 목록을 작성할 수 있습니다. 그리고 이러한 에러는 라이브러리의 구현 세부 사항이기 때문에 항상 해당 라이브러리 내에서 처리됩니다.
+
+- 클로저 인수를 받고 해당 클로저의 에러를 전파하는 함수와 같이 일반 파라미터에 의해 설명된 에러만 전파하는 코드에서 특정 에러 타입 전파와 `rethrows` 사용 간의 비교는 `doc:Declarations:Rethrowing-Functions-and-Methods` 를 참조하세요.
+
+#
+
+예를 들어 다음과 같은 에러 타입을 사용하는 평점 요약 코드를 고려해 보세요.
+
+~~~ swift
+enum StatisticsError: Error {
+    case noRatings
+    case invalidRating(Int)
+}
+~~~
+
 
 
 
