--- a/Swift Documentation/2.Language Guide/17.Error Handling.md
+++ b/Swift Documentation/2.Language Guide/17.Error Handling.md
@@ -422,10 +422,143 @@ enum StatisticsError: Error {
 }
 ~~~
 
+#
+
+함수가 에러로 `StatisticsError` 값만 던지도록 지정하려면 함수를 선언할 때 `throws` 대신 `throws(StatisticsError)` 를 작성합니다.
+
+이 구문은 함수 선언에서 `throws` 뒤에 에러 타입을 작성하기 때문에 `typed throws` 라고도 합니다.
+
+예를 들어 아래 함수는 에러로 `StatisticsError` 값을 던집니다.
+
+~~~ swift
+func summarize(_ ratings: [Int]) throws(StatisticsError) {
+    guard !ratings.isEmpty else { throw .noRatings }
 
 
+    var counts = [1: 0, 2: 0, 3: 0]
+    for rating in ratings {
+        guard rating > 0 && rating <= 3 else { throw .invalidRating(rating) }
+        counts[rating]! += 1
+    }
 
 
+    print("*", counts[1]!, "-- **", counts[2]!, "-- ***", counts[3]!)
+}
+~~~
+
+위의 코드에서 `summarize(_:)` 함수는 1에서 3까지의 평점 목록을 요약합니다.
+
+이 함수는 입력이 유효하지 않으면 `StatisticsError` 의 인스턴스를 던집니다.
+
+위 코드에서 에러를 던지는 두 곳 모두 함수의 에러 타입이 이미 정의되어 있기 때문에 `throw .noRatings` 와 같이 에러 타입을 생략합니다.
+
+이와 같이 함수에서 에러를 던질 때 `throw StatisticsError.noRatings` 대신 짧은 형식인 `throw .noRatings` 를 사용할 수 있습니다.
+
+#
+
+함수 시작 부분에 특정 에러 타입을 작성하면 Swift 는 다른 에러를 던지지 않도록 확인합니다.
+
+예를 들어 위의 `summarize(_:)` 함수에서 이전 예제의 `VendingMachineError` 를 사용하려고 하면 해당 코드는 컴파일 타임에 에러를 발생시킵니다.
+
+#
+
+타입이 지정된 `throws` 를 사용하는 함수를 일반적인 `throws` 함수 내에서 호출할 수 있습니다.
+
+~~~ swift
+func someThrowingFunction() -> throws {
+    let ratings = [1, 2, 3, 2, 2, 1]
+    try summarize(ratings)
+}
+~~~
+
+위 코드는 `someThrowingFunction()` 의 에러 타입을 지정하지 않으므로 `Error` 를 던집니다.
+
+아래 코드는 위의 코드와 동일하게 작동하며 에러 타입을 `throws(any Error)` 로 명시적으로 작성할 수도 있습니다.
+
+~~~ swift
+func someThrowingFunction() -> throws(any Error) {
+    let ratings = [1, 2, 3, 2, 2, 1]
+    try summarize(ratings)
+}
+~~~
+
+이 코드에서 `someThrowingFunction()` 은 `summarize(_:)` 가 던지는 모든 에러를 전파합니다.
+
+`summarize(_:)` 에서 발생하는 에러는 항상 `StatisticsError` 값이며 이는 `someThrowingFunction()` 이 던질 수 있는 유효한 에러입니다.
+
+#
+
+`Never` 반환 타입을 사용하여 결코 반환하지 않는 함수를 작성할 수 있는 것처럼 절대 던지지 않는 함수를 `throws(Never)` 로 작성할 수 있습니다.
+
+~~~ swift
+func nonThrowingFunction() throws(Never) {
+  // ...
+}
+~~~
+
+이 함수는 던질 `Never` 타입의 값을 생성하는 것이 불가능하기 때문에 에러를 던질 수 없습니다.
+
+#
+
+함수의 에러 타입을 지정하는 것 외에도 `do-catch` 문에 특정 에러 타입을 작성할 수도 있습니다.
+
+~~~ swift
+let ratings = []
+do throws(StatisticsError) {
+    try summarize(ratings)
+} catch {
+    switch error {
+    case .noRatings:
+        print("No ratings available")
+    case .invalidRating(let rating):
+        print("Invalid rating: \(rating)")
+    }
+}
+// Prints "No ratings available"
+~~~
+
+이 코드에서 `do throws(StatisticsError)` 는 `do-catch` 문이 에러로 `StatisticsError` 값을 던진다는 것을 나타냅니다.
+
+다른 `do-catch` 문과 마찬가지로 `catch` 절은 모든 가능한 에러를 처리하거나 처리되지 않은 에러를 주변 범위에서 처리할 수 있도록 전파할 수 있습니다.
+
+이 코드는 각 열거형 값에 대한 하나의 케이스를 가지는 `switch` 문을 사용하여 모든 에러를 처리합니다.
+
+패턴이 없는 다른 `catch` 절과 마찬가지로 이 절은 모든 에러와 일치하며 에러를 `error` 라는 로컬 상수에 바인딩합니다.
+
+`do-catch` 문이 값을 던지기 때문에 `error` 는 `StatisticsError` 타입의 값입니다.
+
+#
+
+위의 `catch` 절은 `switch` 문을 사용하여 각각의 가능한 에러를 매치하고 처리합니다.
+
+`StatisticsError` 에 새로운 케이스를 추가하고 에러 처리 코드를 업데이트하지 않으면 Swift 는 `switch` 문이 더 이상 포괄적이지 않기 때문에 에러를 발생시킵니다.
+
+모든 자체 에러를 처리하는 라이브러리의 경우 이 접근 방식을 사용하여 새로운 에러가 생길 때마다 해당 에러를 처리하는 새로운 코드를 추가하도록 할 수 있습니다.
+
+#
+
+함수나 `do` 블럭이 단일 타입의 에러만 던지는 경우 Swift 는 이 코드가 `typed throws` 를 사용한다고 추론합니다.
+
+이 짧은 구문을 사용하면 위의 `do-catch` 예제를 다음과 같이 작성할 수 있습니다.
+
+~~~ swift
+let ratings = []
+do {
+    try summarize(ratings)
+} catch {
+    switch error {
+    case .noRatings:
+        print("No ratings available")
+    case .invalidRating(let rating):
+        print("Invalid rating: \(rating)")
+    }
+}
+// Prints "No ratings available"
+~~~
+
+위의 `do-catch` 블럭이 어떤 타입의 에러를 던지는지 지정하지 않았지만 Swift 는 이 블럭이 `StatisticsError` 를 던진다고 추론합니다.
+
+Swift 가 `typed throws` 를 추론하지 않도록 하려면 명시적으로 `throws(any Error)` 를 작성할 수 있습니다.
 
 <br>
 
