--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -2,7 +2,66 @@
 
 비동기 작업을 수행합니다.
 
+Swift 는 구조화된 방식으로 비동기와 병렬 코드 작성을 위한 기본 제공 지원 기능을 제공합니다.
 
+비동기 코드는 일시적으로 중단되었다가 다시 실행할 수 있지만 한번에 프로그램의 한부분만 실행됩니다.
+
+프로그램에서 코드를 일시 중단하고 다시 실행하게 만들어주는데 이것은 UI 업데이트와 같이 짧은 작업을 계속 진행하면서 네트워크를 통해 데이터를 가져오거나 파일을 파싱(분석)하는 것과 같은 긴 실행 작업을 계속할 수 있습니다.
+
+병렬 코드는 동시에 코드의 여러 부분이 실행됨을 의미합니다.
+
+예를 들어 4코어 프로세서의 컴퓨터는 각 코어가 하나의 작업을 수행하므로 코드의 4개 부분을 동시에 실행할 수 있습니다.
+
+병렬과 비동기 코드를 사용하는 프로그램은 한 번에 여러 작업을 수행하고 외부 시스템을 기다리는 작업을 중단 시킬 수 있습니다.
+
+#
+
+병렬 또는 비동기 코드의 추가적인 스케줄링 유연성에는 복잡성이 증가하는 비용도 수반됩니다.
+
+Swift 를 사용하면 일부 컴파일 타임 검사를 하는 방식으로 당신의 코드 의도를 표현할 수 있습니다.
+
+예를 들어 액터를 사용하여 변경가능한 상태에 안전하게 접근할 수 있습니다.
+
+그러나 느리거나 버그가 있는 코드에 동시성을 추가한다고 해서 코드가 빠르거나 올바르게 동작한다는 보장은 없습니다.
+
+사실 동시성을 추가하면 코드를 디버그하기 더 어렵게 만들 수도 있습니다.
+
+그러나 동시성이 필요한 코드에서 Swift 의 언어 수준 동시성 지원을 사용하면 Swift 가 컴파일 타임에 문제를 찾는데 도움이 될 수 있습니다.
+
+#
+
+이 챕터의 나머지 부분에서는 동시성이라는 용어를 사용하여 비동기와 병렬 코드의 일반적인 조합을 나타냅니다.
+
+> Note    
+> 이전에 동시성 코드를 작성한 적이 있다면 쓰레드 동작에 익숙할 것입니다.
+> Swift 의 동시성 모델은 쓰레드의 최상단에 구축되지만 쓰레드와 직접 상호작용하지 않습니다.
+> Swift 의 비동기 함수는 실행중인 쓰레드를 포기할 수 있습니다.
+> 그러면 첫번째 함수가 차단된 동안 해당 쓰레드에서 다른 비동기 함수가 실행될 수 있습니다.
+> 비동기 함수의 실행이 재개될 때 Swift 는 해당 함수가 어떤 쓰레드에서 실행될지 보장하지 않습니다.
+
+#
+
+Swift 의 언어 지원을 사용하지 않고 동시성 코드를 작성할 수 있지만 해당 코드는 읽기가 더 어려운 경향이 있습니다.
+
+예를 들어 다음 코드는 사진 이름 목록을 다운로드하고 해당 목록의 첫번째 사진을 다운로드한 후 해당 사진을 사용자에게 표시합니다.
+
+~~~ swift
+listPhotos(inGallery: "Summer Vacation") { photoNames in
+    let sortedNames = photoNames.sorted()
+    let name = sortedNames[0]
+    downloadPhoto(named: name) { photo in
+        show(photo)
+    }
+}
+~~~
+
+이 간단한 경우에도 완료 핸들러가 연속해서 작성되어야 하므로 결국 중첩된 클로저를 작성하게 됩니다.
+
+이 스타일에서 더 많이 중첩된 복잡한 코드는 빠르게 다루기 어려울 수 있습니다.
+
+<br>
+
+## 비동기 함수 정의 및 호출 (Defining and Calling Asynchronous Functions)
 
 
 
