--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -63,7 +63,68 @@ listPhotos(inGallery: "Summer Vacation") { photoNames in
 
 ## 비동기 함수 정의 및 호출 (Defining and Calling Asynchronous Functions)
 
+비동기 함수 또는 비동기 메서드는 실행 도중에 일시적으로 중단될 수 있는 특수한 종류의 함수 또는 메서드 입니다.
 
+이것은 완료될 때까지 실행되거나 에러가 발생하거나 또는 반환되지 않는 일반적인 동기 함수 및 메서드와 대조됩니다.
+
+비동기 함수 또는 메서드는 이 세가지 중 하나를 수행하지만 무언가를 기다리고 있을 때 중간에 일시 중지될 수도 있습니다.
+
+비동기 함수 또는 메서드의 본문 내부에서 실행을 일시 중지할 수 있는 부분을 표시합니다.
+
+#
+
+함수 또는 메서드가 비동기 임을 나타내려면 파라미터 뒤의 선언에 `async` 키워드를 작성합니다.
+
+이것은 던지는 함수를 나타내기 위해 `throws` 키워드를 사용하는 것과 유사합니다.
+
+함수 또는 메서드가 값을 반환하는 경우 반환 화살표 (`->`) 전에 `async` 를 작성합니다.
+
+예를 들어 갤러리에서 사진의 이름을 가져오는 방법은 아래와 같습니다.
+
+~~~ swift
+func listPhotos(inGallery name: String) async -> [String] {
+    let result = // ... some asynchronous networking code ...
+    return result
+}
+~~~
+
+비동기적이면서 던지기 기능을 하는 함수 또는 메서드의 경우 `throws` 앞에 `async` 를 작성합니다.
+
+#
+
+비동기 메서드를 호출할 때 해당 메서드가 반환될 때까지 실행이 일시 중단됩니다.
+
+중단될 가능성이 있는 지점을 표시하기 위해 호출 앞에 `await` 을 작성합니다.
+
+이것은 던지는 함수를 호출할 때 에러가 발생할 경우 프로그램의 흐름을 변경 가능함을 나타내기 위해 `try` 를 작성하는 것과 같습니다.
+
+비동기 메서드 내부에서 실행 흐름은 다른 비동기 메서드를 호출할 때만 중단됩니다.
+
+중단은 암시적이거나 선점적이지 않습니다.
+
+즉 모든 가능한 모든 중단 지점이 `await` 로 표시됩니다.
+
+코드에서 가능한 모든 중단 지점을 표시하면 동시성 코드를 더 쉽게 읽고 이해할 수 있습니다.
+
+#
+
+예를 들어 아래 코드는 갤러리에 있는 모든 사진의 이름을 가져온 다음 첫번째 사진을 표시합니다.
+
+~~~ swift
+let photoNames = await listPhotos(inGallery: "Summer Vacation")
+let sortedNames = photoNames.sorted()
+let name = sortedNames[0]
+let photo = await downloadPhoto(named: name)
+show(photo)
+~~~
+
+`listPhotos(inGallery:)` 와 `downloadPhoto(named:)` 함수 모두 네트워크 요청을 해야 하기 때문에 완료하는데 비교적 오랜시간이 걸릴 수 있습니다.
+
+반환 화살표 전에 `async` 를 작성하여 둘 다 비동기로 만들면 이 코드는 사진이 준비될 때까지 기다리는 동안 앱의 나머지 코드는 계속 실행될 수 있습니다.
+
+#
+
+위 예제의 동시성을 이해하기 위한 실행 순서는 다음과 같습니다.
 
 
 
