--- a/Swift Documentation/2.Language Guide/18.Concurrency.md
+++ b/Swift Documentation/2.Language Guide/18.Concurrency.md
@@ -126,11 +126,114 @@ show(photo)
 
 위 예제의 동시성을 이해하기 위한 실행 순서는 다음과 같습니다.
 
+1. 코드는 첫번째 줄에서 실행을 시작하고 첫번째 `await` 까지 실행됩니다. `listPhotos(inGallery:)` 함수를 호출하고 해당 함수가 반환될 때까지 실행을 일시 중단합니다.
 
+2. 이 코드의 실행이 중단되는 동안 같은 프로그램의 다른 동시 코드가 실행됩니다. 예를 들어 오랜시간 동안 실행되는 백그라운드 작업이 새로운 사진의 리스트를 계속 업데이트 할 수 있습니다. 이 코드는 `await` 으로 표시된 다음 중단 지점 또는 완료될 때까지 실행됩니다.
 
+3. `listPhotos(inGallery:)` 가 반환된 후 이 코드는 해당 지점에서 시작하여 실행을 계속합니다. 반환된 값을 `photoNames` 에 할당합니다.
 
+4. `sortedNames` 와 `name` 을 정의하는 라인은 일반적인 동기 코드 입니다. 이 라인은 `await` 으로 표시되지 않았으므로 가능한 중단 지점이 없습니다.
 
+5. 다음 `await` 은 `downloadPhoto(named:)` 함수에 대한 호출을 표시합니다. 이 코드는 해당 함수가 반환될 때까지 실행을 다시 일시 중단하여 다른 동시 코드가 실행될 수 있는 기회를 제공합니다.
 
+6. `downloadPhoto(named:)` 가 반환된 후에 반환값은 `photo` 에 할당된 다음 `show(_:)` 를 호출할 때 인수로 전달됩니다.
+
+#
+
+코드에서 `await` 으로 표시된 코드의 중단이 가능한 지점은 비동기 함수 또는 메서드가 반환될 때까지 기다리는 동안 현재 코드 부분이 실행을 일시적으로 중단할 수 있음을 나타냅니다.
+
+이것을 쓰레드 양보 라고도 하는데 Swift 가 내부적으로 현재 쓰레드에서 코드 실행을 일시 중지하고 대신 해당 쓰레드에서 다른 코드를 실행하기 때문입니다.
+
+`await` 으로 표시된 코드는 실행을 일시 중단할 수 있어야 하므로 프로그램의 특정 위치에서만 비동기 함수 또는 메서드를 호출할 수 있습니다.
+
+- 비동기 함수, 메서드 또는 프로퍼티의 본문에 있는 코드
+
+- `@main` 으로 표시된 구조체, 클래스 또는 열거형의 정적 (static) `main()` 메서드에 있는 코드
+
+- 아래의 [구조화되지 않은 동시성 (Unstructured Concurrency)]() 에서 볼 수 있듯이 구조화되지 않은 하위 작업의 코드
+
+#
+
+`Task.yield()` 메서드를 호출하여 명시적으로 중단 지점을 삽입할 수 있습니다.
+
+~~~ swift
+func generateSlideshow(forGallery gallery: String) async {
+    let photos = await listPhotos(inGallery: gallery)
+    for photo in photos {
+        // ... render a few seconds of video for this photo ...
+        await Task.yield()
+    }
+}
+~~~
+
+영상 렌더링을 동기화하는 코드가 있다고 가정해보면 이것은 어떠한 중단 지점을 포함하지 않습니다.
+
+영상 렌더링 작업은 오랜 시간이 걸릴 수 있습니다.
+
+그러나 주기적으로 `Task.yield()` 를 호출하여 명시적으로 중단 지점을 삽입할 수 있습니다.
+
+이러한 방법으로 오래걸리는 실행 코드를 구조화하면 Swift 는 이 작업과 다른 작업의 진행을 균형적으로 맞출 수 있습니다.
+
+#
+
+`Task.sleep(for:tolerance:clock:)` 메서드는 동시성이 어떻게 동작하는지 알기위해 간단한 코드를 작성할 때 유용합니다.
+
+이 메서드는 주어진 시간만큼 현재 작업을 중단합니다.
+
+다음은 네트워크 작업을 기다리는 것을 시뮬레이션하는데 사용되는 `sleep(for:tolerance:clock:)` 을 사용하는 `listPhotos(inGallery:)` 함수 입니다.
+
+~~~ swift
+func listPhotos(inGallery name: String) async throws -> [String] {
+    try await Task.sleep(for: .seconds(2))
+    return ["IMG001", "IMG99", "IMG0404"]
+}
+~~~
+
+위 코드에서 `listPhotos(inGallery:)` 는 `Task.sleep(until:tolerance:clock:)` 호출이 에러를 발생시킬 수 있기 때문에 비동기와 던지기를 모두 작성하였습니다.
+
+이 버전의 `listPhotos(inGallery:)` 를 호출하려면 `try` 와 `await` 모두 작성해야 합니다.
+
+~~~ swift
+let photos = try await listPhotos(inGallery: "A Rainy Weekend")
+~~~
+
+비동기 함수는 던지기 함수와 몇가지 유사한 점이 있습니다.
+
+비동기 또는 던지는 함수를 정의할 때 `async` 또는 `throws` 를 표시하고 해당 함수를 호출할 때 `await` 또는 `try` 를 표시합니다.
+
+비동기 함수는 던지는 함수가 다른 던지는 함수를 호출할 수 있는 것처럼 다른 비동기 함수를 호출할 수 있습니다.
+
+#
+
+하지만 매우 중요한 차이점이 있습니다.
+
+에러를 처리하기 위해 `do-catch` 블럭에 코드를 래핑하거나 에러를 다른곳에서 처리하기 위해 에러를 저장하는 `Result` 를 사용할 수 있습니다.
+
+이러한 접근방식은 던지지 않는 코드에서 던지는 함수를 호출할 수 있습니다.
+
+~~~ swift
+func availableRainyWeekendPhotos() -> Result<[String], Error> {
+    return Result {
+        try listDownloadedPhotos(inGallery: "A Rainy Weekend")
+    }
+}
+~~~
+
+반면 비동기 코드를 래핑하여 동기 코드에서 호출하고 결과를 기다릴 수 있는 안전한 방법은 없습니다.
+
+Swift 표준 라이브러리는 의도적으로 이 안전하지 않은 기능을 생략합니다.
+
+이를 직접 구현하려고 하면 미묘한 경합, 쓰레드 이슈 그리고 데드락과 같은 문제가 발생할 수 있습니다.
+
+기존 프로젝트에 비동기 코드를 추가할 때는 위에서 아래로 작업해야 합니다.
+
+특히 최상위 레이어부터 변환하여 비동기를 사용하도록 한 다음 호출하는 함수와 메서드를 변환하여 한번에 하나의 레이어씩 작업합니다.
+
+동기 코드는 비동기 코드를 호출할 수 없으므로 상향식 접근 방식을 사용할 수 없습니다.
+
+<br>
+
+## 비동기 시퀀스 (Asynchronous Sequences)
 
 
 
